6755909: Changes for openjdk6 build 06 6605798: JAX-WS RI 2.1.1 should be integrated in OpenJDK6 Summary: Final b06 state (as defined by the source bundle) Reviewed-by: darcy