@@ -1,5 +1,5 @@
 /*
- * Copyright 2006 Sun Microsystems, Inc.  All Rights Reserved.
+ * Copyright 2005-2006 Sun Microsystems, Inc.  All Rights Reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,38 +23,9 @@
  * have any questions.
  *
  * THIS FILE WAS MODIFIED BY SUN MICROSYSTEMS, INC.
- */
-
-/*
- * Copyright 2006 Sun Microsystems, Inc.  All Rights Reserved.
- * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
- *
- * This code is free software; you can redistribute it and/or modify it
- * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Sun designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Sun in the LICENSE file that accompanied this code.
- *
- * This code is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
- * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
- * version 2 for more details (a copy is included in the LICENSE file that
- * accompanied this code).
- *
- * You should have received a copy of the GNU General Public License version
- * 2 along with this work; if not, write to the Free Software Foundation,
- * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
- *
- * Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
- * CA 95054 USA or visit www.sun.com if you need additional information or
- * have any questions.
- *
- * THIS FILE WAS MODIFIED BY SUN MICROSYSTEMS, INC.
- *
  */
 package com.sun.xml.internal.fastinfoset;
 
-import com.sun.xml.internal.fastinfoset.algorithm.BuiltInEncodingAlgorithm;
 import com.sun.xml.internal.fastinfoset.algorithm.BuiltInEncodingAlgorithmFactory;
 import com.sun.xml.internal.fastinfoset.org.apache.xerces.util.XMLChar;
 import com.sun.xml.internal.fastinfoset.util.CharArrayIntMap;
@@ -72,12 +43,14 @@ import com.sun.xml.internal.org.jvnet.fastinfoset.EncodingAlgorithmIndexes;
 import com.sun.xml.internal.org.jvnet.fastinfoset.ExternalVocabulary;
 import com.sun.xml.internal.org.jvnet.fastinfoset.FastInfosetException;
 import com.sun.xml.internal.org.jvnet.fastinfoset.FastInfosetSerializer;
+import com.sun.xml.internal.org.jvnet.fastinfoset.RestrictedAlphabet;
+import com.sun.xml.internal.org.jvnet.fastinfoset.VocabularyApplicationData;
 import org.xml.sax.helpers.DefaultHandler;
 
 /**
  * Abstract encoder for developing concrete encoders.
  *
- * Concrete implementations extending Encoder will utilize methods on Encoder
+ * Concrete implementations extending Encoder will utilize methods on Encoder 
  * to encode XML infoset according to the Fast Infoset standard. It is the
  * responsibility of the concrete implementation to ensure that methods are
  * invoked in the correct order to produce a valid fast infoset document.
@@ -88,55 +61,94 @@ import org.xml.sax.helpers.DefaultHandler;
  * methods that take org.sax.xml.DefaultHandler as a parameter.
  *
  * <p>
- * Buffering of octets that are written to an {@link java.io.OutputStream} is
+ * Buffering of octets that are written to an {@link java.io.OutputStream} is 
  * supported in a similar manner to a {@link java.io.BufferedOutputStream}.
  * Combining buffering with encoding enables better performance.
  *
  * <p>
- * More than one fast infoset document may be encoded to the
+ * More than one fast infoset document may be encoded to the 
  * {@link java.io.OutputStream}.
  *
  */
 public abstract class Encoder extends DefaultHandler implements FastInfosetSerializer {
-
-    /**
-     * Character encoding scheme system property for the encoding
+    
+    /** 
+     * Character encoding scheme system property for the encoding 
      * of content and attribute values.
      */
     public static final String CHARACTER_ENCODING_SCHEME_SYSTEM_PROPERTY =
         "com.sun.xml.internal.fastinfoset.serializer.character-encoding-scheme";
 
-    /**
-     * Default character encoding scheme system property for the encoding
+    /** 
+     * Default character encoding scheme system property for the encoding 
      * of content and attribute values.
      */
-    protected static String _characterEncodingSchemeSystemDefault = UTF_8;
-
-    static {
-        // Initiate the default character encoding schema from the system
-        // property
+    protected static final String _characterEncodingSchemeSystemDefault = getDefaultEncodingScheme();
+        
+    private static String getDefaultEncodingScheme() {
         String p = System.getProperty(CHARACTER_ENCODING_SCHEME_SYSTEM_PROPERTY,
-            _characterEncodingSchemeSystemDefault);
+            UTF_8);
         if (p.equals(UTF_16BE)) {
-            _characterEncodingSchemeSystemDefault = UTF_16BE;
+            return UTF_16BE;
+        } else {
+            return UTF_8;
         }
     }
 
+    protected static int[] NUMERIC_CHARACTERS_TABLE;
+    
+    protected static int[] DATE_TIME_CHARACTERS_TABLE;
+    
+    static {
+        NUMERIC_CHARACTERS_TABLE = new int[maxCharacter(RestrictedAlphabet.NUMERIC_CHARACTERS) + 1];
+        DATE_TIME_CHARACTERS_TABLE = new int[maxCharacter(RestrictedAlphabet.DATE_TIME_CHARACTERS) + 1];
+    
+        for (int i = 0; i < NUMERIC_CHARACTERS_TABLE.length ; i++) {
+            NUMERIC_CHARACTERS_TABLE[i] = -1;
+        }
+        for (int i = 0; i < DATE_TIME_CHARACTERS_TABLE.length ; i++) {
+            DATE_TIME_CHARACTERS_TABLE[i] = -1;
+        }
+        
+        for (int i = 0; i < RestrictedAlphabet.NUMERIC_CHARACTERS.length() ; i++) {
+            NUMERIC_CHARACTERS_TABLE[RestrictedAlphabet.NUMERIC_CHARACTERS.charAt(i)] = i;
+        }        
+        for (int i = 0; i < RestrictedAlphabet.DATE_TIME_CHARACTERS.length() ; i++) {
+            DATE_TIME_CHARACTERS_TABLE[RestrictedAlphabet.DATE_TIME_CHARACTERS.charAt(i)] = i;
+        }
+    }
+    
+    private static int maxCharacter(String alphabet) {
+        int c = 0;
+        for (int i = 0; i < alphabet.length() ; i++) {
+            if (c < alphabet.charAt(i)) {
+                c = alphabet.charAt(i);
+            }
+        }
+        
+        return c;
+    }
+    
+    /**
+     * True if DTD and internal subset shall be ignored.
+     */
+    private boolean _ignoreDTD;
+    
     /**
      * True if comments shall be ignored.
      */
     private boolean _ignoreComments;
-
+    
     /**
      * True if procesing instructions shall be ignored.
      */
     private boolean _ignoreProcessingInstructions;
-
+    
     /**
      * True if white space characters for text content shall be ignored.
      */
     private boolean _ignoreWhiteSpaceTextContent;
-
+    
     /**
      * True, if the local name string is used as the key to find the
      * associated set of qualified names.
@@ -145,7 +157,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      * to find the associated set of qualified names.
      */
     private boolean _useLocalNameAsKeyForQualifiedNameLookup;
-
+            
     /**
      * True if strings for text content and attribute values will be
      * UTF-8 encoded otherwise they will be UTF-16 encoded.
@@ -161,7 +173,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      * Encoding constant generated from the string encoding.
      */
     private int _nonIdentifyingStringOnFirstBitCES;
-
+    
     /**
      * The map of URIs to algorithms.
      */
@@ -172,6 +184,11 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      */
     protected SerializerVocabulary _v;
 
+    /**
+     * The vocabulary application data that is used by the encoder
+     */
+    protected VocabularyApplicationData _vData;
+    
     /**
      * True if the vocubulary is internal to the encoder
      */
@@ -188,13 +205,13 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     protected int _b;
 
     /**
-     * The {@link java.io.OutputStream} that the encoded XML infoset (the
+     * The {@link java.io.OutputStream} that the encoded XML infoset (the 
      * fast infoset document) is written to.
      */
     protected OutputStream _s;
 
     /**
-     * The internal buffer of characters used for the UTF-8 or UTF-16 encoding
+     * The internal buffer of characters used for the UTF-8 or UTF-16 encoding 
      * of characters.
      */
     protected char[] _charBuffer = new char[512];
@@ -203,12 +220,12 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      * The internal buffer of bytes.
      */
     protected byte[] _octetBuffer = new byte[1024];
-
+    
     /**
      * The current position in the internal buffer.
      */
     protected int _octetBufferIndex;
-
+   
     /**
      * The current mark in the internal buffer.
      *
@@ -218,82 +235,107 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     protected int _markIndex = -1;
 
     /**
-     * The limit on the size of [normalized value] of Attribute Information
+     * The limit on the size of [normalized value] of Attribute Information 
      * Items that will be indexed.
      */
     protected int attributeValueSizeConstraint = FastInfosetSerializer.ATTRIBUTE_VALUE_SIZE_CONSTRAINT;
+    
+    /**
+     * The limit on the size of indexed Map for attribute values
+     * Limit is measured in characters number
+     */
+    protected int attributeValueMapTotalCharactersConstraint = FastInfosetSerializer.ATTRIBUTE_VALUE_MAP_MEMORY_CONSTRAINT / 2;
 
     /**
      * The limit on the size of character content chunks
-     * of Character Information Items or Comment Information Items that
+     * of Character Information Items or Comment Information Items that 
      * will be indexed.
      */
     protected int characterContentChunkSizeContraint = FastInfosetSerializer.CHARACTER_CONTENT_CHUNK_SIZE_CONSTRAINT;
 
-
+    /**
+     * The limit on the size of indexed Map for character content chunks
+     * Limit is measured in characters number
+     */
+    protected int characterContentChunkMapTotalCharactersConstraint = FastInfosetSerializer.CHARACTER_CONTENT_CHUNK_MAP_MEMORY_CONSTRAINT / 2;
+    
     /**
      * Default constructor for the Encoder.
      */
     protected Encoder() {
-        setCharacterEncodingScheme(_characterEncodingSchemeSystemDefault);
+        setCharacterEncodingScheme(_characterEncodingSchemeSystemDefault);        
     }
-
+    
     protected Encoder(boolean useLocalNameAsKeyForQualifiedNameLookup) {
-        setCharacterEncodingScheme(_characterEncodingSchemeSystemDefault);
+        setCharacterEncodingScheme(_characterEncodingSchemeSystemDefault);        
         _useLocalNameAsKeyForQualifiedNameLookup = useLocalNameAsKeyForQualifiedNameLookup;
     }
-
-
+    
+    
     // FastInfosetSerializer interface
-
+    
+    /**
+     * {@inheritDoc}
+     */
+    public final void setIgnoreDTD(boolean ignoreDTD) {
+        _ignoreDTD = ignoreDTD;
+    }
+    
+    /**
+     * {@inheritDoc}
+     */
+    public final boolean getIgnoreDTD() {
+        return _ignoreDTD;
+    }
+    
     /**
      * {@inheritDoc}
      */
     public final void setIgnoreComments(boolean ignoreComments) {
         _ignoreComments = ignoreComments;
     }
-
+    
     /**
      * {@inheritDoc}
      */
     public final boolean getIgnoreComments() {
         return _ignoreComments;
     }
-
+    
     /**
      * {@inheritDoc}
      */
-    public final void setIgnoreProcesingInstructions(boolean
+    public final void setIgnoreProcesingInstructions(boolean 
             ignoreProcesingInstructions) {
         _ignoreProcessingInstructions = ignoreProcesingInstructions;
     }
-
+    
     /**
      * {@inheritDoc}
      */
     public final boolean getIgnoreProcesingInstructions() {
         return _ignoreProcessingInstructions;
     }
-
+    
     /**
      * {@inheritDoc}
      */
-    public final void setIgnoreWhiteSpaceTextContent(boolean ignoreWhiteSpaceTextContent) {
+    public final void setIgnoreWhiteSpaceTextContent(boolean ignoreWhiteSpaceTextContent) {        
         _ignoreWhiteSpaceTextContent = ignoreWhiteSpaceTextContent;
     }
-
+    
     /**
      * {@inheritDoc}
      */
     public final boolean getIgnoreWhiteSpaceTextContent() {
         return _ignoreWhiteSpaceTextContent;
     }
-
+        
     /**
      * {@inheritDoc}
      */
     public void setCharacterEncodingScheme(String characterEncodingScheme) {
-        if (characterEncodingScheme.equals(UTF_16BE)) {
+        if (characterEncodingScheme.equals(UTF_16BE)) { 
             _encodingStringsAsUtf8 = false;
             _nonIdentifyingStringOnThirdBitCES = EncodingConstants.CHARACTER_CHUNK | EncodingConstants.CHARACTER_CHUNK_UTF_16_FLAG;
             _nonIdentifyingStringOnFirstBitCES = EncodingConstants.NISTRING_UTF_16_FLAG;
@@ -303,14 +345,14 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
             _nonIdentifyingStringOnFirstBitCES = 0;
         }
     }
-
+        
     /**
      * {@inheritDoc}
      */
     public String getCharacterEncodingScheme() {
         return (_encodingStringsAsUtf8) ? UTF_8 : UTF_16BE;
     }
-
+    
     /**
      * {@inheritDoc}
      */
@@ -335,10 +377,10 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
         if (size < 0 ) {
             size = 0;
         }
-
+                
         characterContentChunkSizeContraint = size;
     }
-
+    
     /**
      * {@inheritDoc}
      */
@@ -349,19 +391,82 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     /**
      * {@inheritDoc}
      */
-    public void setAttributeValueSizeLimit(int size) {
+    public void setCharacterContentChunkMapMemoryLimit(int size) {
         if (size < 0 ) {
             size = 0;
         }
+        
+        characterContentChunkMapTotalCharactersConstraint = size / 2;
+    }
+    
+    /**
+     * {@inheritDoc}
+     */
+    public int getCharacterContentChunkMapMemoryLimit() {
+        return characterContentChunkMapTotalCharactersConstraint * 2;
+    }
 
-        attributeValueSizeConstraint = size;
+    /**
+     * Checks whether character content chunk (its length) matches limits:
+     * length limit itself and limit for total capacity of specified CharArrayIntMap
+     *
+     * @param length the length of character content chunk is checking to be added to Map.
+     * @param map the custom CharArrayIntMap, which memory limits will be checked.
+     * @return whether character content chunk length matches limits
+     */
+    public boolean isCharacterContentChunkLengthMatchesLimit(int length, CharArrayIntMap map) {
+        return (length < characterContentChunkSizeContraint) &&
+                (map.getTotalCharacterCount() + length <
+                        characterContentChunkMapTotalCharactersConstraint);
     }
 
     /**
      * {@inheritDoc}
      */
+    public void setAttributeValueSizeLimit(int size) {
+        if (size < 0 ) {
+            size = 0;
+        }
+        
+        attributeValueSizeConstraint = size;
+    }
+    
+    /**
+     * {@inheritDoc}
+     */
     public int getAttributeValueSizeLimit() {
         return attributeValueSizeConstraint;
+    }
+    
+    /**
+     * {@inheritDoc}
+     */
+    public void setAttributeValueMapMemoryLimit(int size) {
+        if (size < 0 ) {
+            size = 0;
+        }
+        
+        attributeValueMapTotalCharactersConstraint = size / 2;
+        
+    }
+    
+    /**
+     * {@inheritDoc}
+     */
+    public int getAttributeValueMapMemoryLimit() {
+        return attributeValueMapTotalCharactersConstraint * 2;
+    }
+    
+    /**
+     * Checks whether attribute value (its length) matches limits:
+     * length limit itself and limit for index Map total capacity
+     *
+     * @return whether attribute value matches limits
+     */
+    public boolean isAttributeValueLengthMatchesLimit(int length) {
+        return (length < attributeValueSizeConstraint) &&
+                (_v.attributeValue.getTotalCharacterCount() + length <
+                        attributeValueMapTotalCharactersConstraint);
     }
 
     /**
@@ -375,21 +480,35 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
                 _useLocalNameAsKeyForQualifiedNameLookup);
         _v.setExternalVocabulary(v.URI,
                 ev, false);
-
+        
         _vIsInternal = true;
     }
-
+    
+    /**
+     * {@inheritDoc}
+     */
+    public void setVocabularyApplicationData(VocabularyApplicationData data) {
+        _vData = data;
+    }
+    
+    /**
+     * {@inheritDoc}
+     */
+    public VocabularyApplicationData getVocabularyApplicationData() {
+        return _vData;
+    }
+    
     // End of FastInfosetSerializer interface
-
+    
     /**
      * Reset the encoder for reuse encoding another XML infoset.
      */
     public void reset() {
         _terminate = false;
     }
-
+        
     /**
-     * Set the OutputStream to encode the XML infoset to a
+     * Set the OutputStream to encode the XML infoset to a 
      * fast infoset document.
      *
      * @param s the OutputStream where the fast infoset document is written to.
@@ -432,9 +551,13 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
             _vIsInternal = true;
         } else if (_vIsInternal) {
             _v.clear();
+            if (_vData != null)
+                _vData.clear();
         }
-
-        if (_v.hasInitialVocabulary()) {
+        
+        if (!_v.hasInitialVocabulary() && !_v.hasExternalVocabulary()) {
+            write(0);
+        } else if (_v.hasInitialVocabulary()) {
             _b = EncodingConstants.DOCUMENT_INITIAL_VOCABULARY_FLAG;
             write(_b);
 
@@ -448,7 +571,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
             }
 
             if (initialVocabulary.hasExternalVocabulary()) {
-                encodeNonEmptyOctetStringOnSecondBit(_v.getExternalVocabularyURI().toString());
+                encodeNonEmptyOctetStringOnSecondBit(_v.getExternalVocabularyURI());
             }
 
             // TODO check for contents of vocabulary to encode values
@@ -460,9 +583,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
             write(_b);
             write(0);
 
-            encodeNonEmptyOctetStringOnSecondBit(_v.getExternalVocabularyURI().toString());
-        } else {
-            write(0);
+            encodeNonEmptyOctetStringOnSecondBit(_v.getExternalVocabularyURI());
         }
     }
 
@@ -501,6 +622,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     protected final void encodeTermination() throws IOException {
         if (_terminate) {
             write(_b);
+            _b = 0;
             _terminate = false;
         }
     }
@@ -508,17 +630,17 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     /**
      * Encode a Attribute Information Item that is a namespace declaration.
      *
-     * @param prefix the prefix of the namespace declaration,
+     * @param prefix the prefix of the namespace declaration, 
      * if "" then there is no prefix for the namespace declaration.
      * @param uri the URI of the namespace declaration,
      * if "" then there is no URI for the namespace declaration.
      */
     protected final void encodeNamespaceAttribute(String prefix, String uri) throws IOException {
         _b = EncodingConstants.NAMESPACE_ATTRIBUTE;
-        if (prefix != "") {
+        if (prefix.length() > 0) {
             _b |= EncodingConstants.NAMESPACE_ATTRIBUTE_PREFIX_FLAG;
         }
-        if (uri != "") {
+        if (uri.length() > 0) {
             _b |= EncodingConstants.NAMESPACE_ATTRIBUTE_NAME_FLAG;
         }
 
@@ -529,10 +651,10 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
 
         write(_b);
 
-        if (prefix != "") {
+        if (prefix.length() > 0) {
             encodeIdentifyingNonEmptyStringOnFirstBit(prefix, _v.prefix);
         }
-        if (uri != "") {
+        if (uri.length() > 0) {
             encodeIdentifyingNonEmptyStringOnFirstBit(uri, _v.namespaceName);
         }
     }
@@ -546,30 +668,30 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      * @throws ArrayIndexOutOfBoundsException.
      */
     protected final void encodeCharacters(char[] ch, int offset, int length) throws IOException {
-        final boolean addToTable = (length < characterContentChunkSizeContraint) ? true : false;
+        final boolean addToTable = isCharacterContentChunkLengthMatchesLimit(length, _v.characterContentChunk);
         encodeNonIdentifyingStringOnThirdBit(ch, offset, length, _v.characterContentChunk, addToTable, true);
     }
 
     /**
      * Encode a chunk of Character Information Items.
      *
-     * If the array of characters is to be indexed (as determined by
+     * If the array of characters is to be indexed (as determined by 
      * {@link Encoder#characterContentChunkSizeContraint}) then the array is not cloned
      * when adding the array to the vocabulary.
-     *
+     * 
      * @param ch the array of characters.
      * @param offset the offset into the array of characters.
      * @param length the length of characters.
      * @throws ArrayIndexOutOfBoundsException.
      */
     protected final void encodeCharactersNoClone(char[] ch, int offset, int length) throws IOException {
-        final boolean addToTable = (length < characterContentChunkSizeContraint) ? true : false;
+        final boolean addToTable = isCharacterContentChunkLengthMatchesLimit(length, _v.characterContentChunk);
         encodeNonIdentifyingStringOnThirdBit(ch, offset, length, _v.characterContentChunk, addToTable, false);
     }
-
+    
     /**
-     * Encode a chunk of Character Information Items using a restricted
-     * alphabet that results in the encoding of a character in 4 bits
+     * Encode a chunk of Character Information Items using a restricted 
+     * alphabet that results in the encoding of a character in 4 bits 
      * (or two characters per octet).
      *
      * @param id the restricted alphabet identifier.
@@ -577,11 +699,22 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      * @param ch the array of characters.
      * @param offset the offset into the array of characters.
      * @param length the length of characters.
+     * @param addToTable if characters should be added to table.
      * @throws ArrayIndexOutOfBoundsException.
      */
-    protected final void encodeFourBitCharacters(int id, int[] table, char[] ch, int offset, int length) throws FastInfosetException, IOException {
+    protected final void encodeFourBitCharacters(int id, int[] table, char[] ch, int offset, int length, 
+            boolean addToTable) throws FastInfosetException, IOException {
+        if (addToTable) {
+            final int index = _v.characterContentChunk.obtainIndex(ch, offset, length, true);
+            if (index != KeyIntMap.NOT_PRESENT) {
+                _b = EncodingConstants.CHARACTER_CHUNK | 0x20;
+                encodeNonZeroIntegerOnFourthBit(index);
+                return;
+            }
+        }
+        
         // This procedure assumes that id <= 64
-        _b = (length < characterContentChunkSizeContraint) ?
+        _b = (addToTable) ?
             EncodingConstants.CHARACTER_CHUNK | EncodingConstants.CHARACTER_CHUNK_RESTRICTED_ALPHABET_FLAG | EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG :
             EncodingConstants.CHARACTER_CHUNK | EncodingConstants.CHARACTER_CHUNK_RESTRICTED_ALPHABET_FLAG;
         write (_b);
@@ -589,9 +722,9 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
         // Encode bottom 6 bits of enoding algorithm id
         _b = id << 2;
 
-        encodeNonEmptyFourBitCharacterStringOnSeventhBit(table, ch, offset, length);
+        encodeNonEmptyFourBitCharacterStringOnSeventhBit(table, ch, offset, length);        
     }
-
+    
     /**
      * Encode a chunk of Character Information Items using a restricted
      * alphabet table.
@@ -601,29 +734,40 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      * @param ch the array of characters.
      * @param offset the offset into the array of characters.
      * @param length the length of characters.
+     * @param addToTable if characters should be added to table
      * @throws ArrayIndexOutOfBoundsException.
      * @throws FastInfosetException if the alphabet is not present in the
      *         vocabulary.
      */
-    protected final void encodeAlphabetCharacters(String alphabet, char[] ch, int offset, int length) throws FastInfosetException, IOException {
+    protected final void encodeAlphabetCharacters(String alphabet, char[] ch, int offset, int length,
+            boolean addToTable) throws FastInfosetException, IOException {
+        if (addToTable) {
+            final int index = _v.characterContentChunk.obtainIndex(ch, offset, length, true);
+            if (index != KeyIntMap.NOT_PRESENT) {
+                _b = EncodingConstants.CHARACTER_CHUNK | 0x20;
+                encodeNonZeroIntegerOnFourthBit(index);
+                return;
+            }
+        }
+
         int id = _v.restrictedAlphabet.get(alphabet);
         if (id == KeyIntMap.NOT_PRESENT) {
             throw new FastInfosetException(CommonResourceBundle.getInstance().getString("message.restrictedAlphabetNotPresent"));
         }
         id += EncodingConstants.RESTRICTED_ALPHABET_APPLICATION_START;
-
-        _b = (length < characterContentChunkSizeContraint) ?
+        
+        _b = (addToTable) ?
             EncodingConstants.CHARACTER_CHUNK | EncodingConstants.CHARACTER_CHUNK_RESTRICTED_ALPHABET_FLAG | EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG :
             EncodingConstants.CHARACTER_CHUNK | EncodingConstants.CHARACTER_CHUNK_RESTRICTED_ALPHABET_FLAG;
         _b |= (id & 0xC0) >> 6;
-        write (_b);
-
+        write(_b);
+        
         // Encode bottom 6 bits of enoding algorithm id
         _b = (id & 0x3F) << 2;
-
+        
         encodeNonEmptyNBitCharacterStringOnSeventhBit(alphabet, ch, offset, length);
     }
-
+            
     /**
      * Encode a Processing Instruction Information Item.
      *
@@ -637,10 +781,34 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
         encodeIdentifyingNonEmptyStringOnFirstBit(target, _v.otherNCName);
 
         // Data
-        boolean addToTable = (data.length() < characterContentChunkSizeContraint) ? true : false;
+        boolean addToTable = isCharacterContentChunkLengthMatchesLimit(data.length(), _v.characterContentChunk);
         encodeNonIdentifyingStringOnFirstBit(data, _v.otherString, addToTable);
     }
 
+    /**
+     * Encode a Document Type Declaration.
+     *
+     * @param systemId the system identifier of the external subset.
+     * @param publicId the public identifier of the external subset.
+     */
+    protected final void encodeDocumentTypeDeclaration(String systemId, String publicId) throws IOException {
+        _b = EncodingConstants.DOCUMENT_TYPE_DECLARATION;
+        if (systemId != null && systemId.length() > 0) {
+            _b |= EncodingConstants.DOCUMENT_TYPE_SYSTEM_IDENTIFIER_FLAG;
+        }
+        if (publicId != null && publicId.length() > 0) {
+            _b |= EncodingConstants.DOCUMENT_TYPE_PUBLIC_IDENTIFIER_FLAG;
+        }
+        write(_b);
+        
+        if (systemId != null && systemId.length() > 0) {
+            encodeIdentifyingNonEmptyStringOnFirstBit(systemId, _v.otherURI);
+        }
+        if (publicId != null && publicId.length() > 0) {
+            encodeIdentifyingNonEmptyStringOnFirstBit(publicId, _v.otherURI);
+        }        
+    }
+    
     /**
      * Encode a Comment Information Item.
      *
@@ -652,17 +820,17 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     protected final void encodeComment(char[] ch, int offset, int length) throws IOException {
         write(EncodingConstants.COMMENT);
 
-        boolean addToTable = (length < characterContentChunkSizeContraint) ? true : false;
+        boolean addToTable = isCharacterContentChunkLengthMatchesLimit(length, _v.otherString);
         encodeNonIdentifyingStringOnFirstBit(ch, offset, length, _v.otherString, addToTable, true);
     }
 
     /**
      * Encode a Comment Information Item.
      *
-     * If the array of characters that is a comment is to be indexed (as
-     * determined by {@link Encoder#characterContentChunkSizeContraint}) then
+     * If the array of characters that is a comment is to be indexed (as 
+     * determined by {@link Encoder#characterContentChunkSizeContraint}) then 
      * the array is not cloned when adding the array to the vocabulary.
-     *
+     * 
      * @param ch the array of characters.
      * @param offset the offset into the array of characters.
      * @param length the length of characters.
@@ -671,12 +839,12 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     protected final void encodeCommentNoClone(char[] ch, int offset, int length) throws IOException {
         write(EncodingConstants.COMMENT);
 
-        boolean addToTable = (length < characterContentChunkSizeContraint) ? true : false;
+        boolean addToTable = isCharacterContentChunkLengthMatchesLimit(length, _v.otherString);
         encodeNonIdentifyingStringOnFirstBit(ch, offset, length, _v.otherString, addToTable, false);
     }
 
     /**
-     * Encode a qualified name of an Element Informaiton Item on the third bit
+     * Encode a qualified name of an Element Informaiton Item on the third bit 
      * of an octet.
      * Implementation of clause C.18 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
@@ -722,13 +890,13 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
 
         int namespaceURIIndex = KeyIntMap.NOT_PRESENT;
         int prefixIndex = KeyIntMap.NOT_PRESENT;
-        if (namespaceURI != "") {
+        if (namespaceURI.length() > 0) {
             namespaceURIIndex = _v.namespaceName.get(namespaceURI);
             if (namespaceURIIndex == KeyIntMap.NOT_PRESENT) {
                 throw new IOException(CommonResourceBundle.getInstance().getString("message.namespaceURINotIndexed", new Object[]{namespaceURI}));
             }
 
-            if (prefix != "") {
+            if (prefix.length() > 0) {
                 prefixIndex = _v.prefix.get(prefix);
                 if (prefixIndex == KeyIntMap.NOT_PRESENT) {
                     throw new IOException(CommonResourceBundle.getInstance().getString("message.prefixNotIndexed", new Object[]{prefix}));
@@ -762,7 +930,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     }
 
     /**
-     * Encode a qualified name of an Attribute Informaiton Item on the third bit
+     * Encode a qualified name of an Attribute Informaiton Item on the third bit 
      * of an octet.
      * Implementation of clause C.17 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
@@ -805,18 +973,18 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
                 LocalNameQualifiedNamesMap.Entry entry) throws IOException {
         int namespaceURIIndex = KeyIntMap.NOT_PRESENT;
         int prefixIndex = KeyIntMap.NOT_PRESENT;
-        if (namespaceURI != "") {
+        if (namespaceURI.length() > 0) {
             namespaceURIIndex = _v.namespaceName.get(namespaceURI);
             if (namespaceURIIndex == KeyIntMap.NOT_PRESENT) {
-                if (namespaceURI == EncodingConstants.XMLNS_NAMESPACE_NAME ||
+                if (namespaceURI == EncodingConstants.XMLNS_NAMESPACE_NAME || 
                         namespaceURI.equals(EncodingConstants.XMLNS_NAMESPACE_NAME)) {
                     return false;
                 } else {
                     throw new IOException(CommonResourceBundle.getInstance().getString("message.namespaceURINotIndexed", new Object[]{namespaceURI}));
                 }
             }
-
-            if (prefix != "") {
+            
+            if (prefix.length() > 0) {
                 prefixIndex = _v.prefix.get(prefix);
                 if (prefixIndex == KeyIntMap.NOT_PRESENT) {
                     throw new IOException(CommonResourceBundle.getInstance().getString("message.prefixNotIndexed", new Object[]{prefix}));
@@ -830,9 +998,9 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
         entry.addQualifiedName(name);
 
         _b = EncodingConstants.ATTRIBUTE_LITERAL_QNAME_FLAG;
-        if (namespaceURI != "") {
+        if (namespaceURI.length() > 0) {
             _b |= EncodingConstants.LITERAL_QNAME_NAMESPACE_NAME_FLAG;
-            if (prefix != "") {
+            if (prefix.length() > 0) {
                 _b |= EncodingConstants.LITERAL_QNAME_PREFIX_FLAG;
             }
         }
@@ -855,7 +1023,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
         } else {
             encodeNonEmptyOctetStringOnSecondBit(localName);
         }
-
+        
         return true;
     }
 
@@ -929,7 +1097,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      * @param map the vocabulary table of character arrays to indexes.
      * @param addToTable true if the string should be added to the vocabulary
      *                   table (if not already present in the table).
-     * @param clone true if the array of characters should be cloned if added
+     * @param clone true if the array of characters should be cloned if added 
      *              to the vocabulary table.
      */
     protected final void encodeNonIdentifyingStringOnFirstBit(char[] ch, int offset, int length, CharArrayIntMap map,
@@ -953,6 +1121,35 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
         }
     }
 
+    protected final void encodeNonIdentifyingStringOnFirstBit(int id, int[] table, String s, boolean addToTable) 
+            throws IOException, FastInfosetException {
+        if (s == null || s.length() == 0) {
+            // C.26 an index (first bit '1') with seven '1' bits for an empty string
+            write(0xFF);
+            return;
+        } else if (addToTable) {
+            final int index = _v.attributeValue.obtainIndex(s);
+            if (index != KeyIntMap.NOT_PRESENT) {
+                encodeNonZeroIntegerOnSecondBitFirstBitOne(index);
+                return;
+            }
+        }
+
+        _b = (addToTable) 
+                ? EncodingConstants.NISTRING_RESTRICTED_ALPHABET_FLAG | EncodingConstants.NISTRING_ADD_TO_TABLE_FLAG
+                : EncodingConstants.NISTRING_RESTRICTED_ALPHABET_FLAG;
+        // Encode identification and top four bits of alphabet id
+        write (_b | ((id & 0xF0) >> 4));
+        // Encode bottom 4 bits of alphabet id
+        _b = (id & 0x0F) << 4;
+
+        final int length = s.length();
+        final int octetPairLength = length / 2;
+        final int octetSingleLength = length % 2;
+        encodeNonZeroOctetStringLengthOnFifthBit(octetPairLength + octetSingleLength);
+        encodeNonEmptyFourBitCharacterString(table, s.toCharArray(), 0, octetPairLength, octetSingleLength);
+    }
+    
     /**
      * Encode a non identifying string on the first bit of an octet as binary
      * data using an encoding algorithm.
@@ -962,7 +1159,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      *            encoding algorithm identifier takes precendence.
      * @param id the encoding algorithm identifier.
      * @param data the data to be encoded using an encoding algorithm.
-     * @throws EncodingAlgorithmException if the encoding algorithm URI is not
+     * @throws EncodingAlgorithmException if the encoding algorithm URI is not 
      *         present in the vocabulary, or the encoding algorithm identifier
      *         is not with the required range.
      */
@@ -986,12 +1183,9 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
                 }
             }
         } else if (id <= EncodingConstants.ENCODING_ALGORITHM_BUILTIN_END) {
-            BuiltInEncodingAlgorithm a = BuiltInEncodingAlgorithmFactory.table[id];
             int length = 0;
             switch(id) {
                 case EncodingAlgorithmIndexes.HEXADECIMAL:
-                    length = ((byte[])data).length;
-                    break;
                 case EncodingAlgorithmIndexes.BASE64:
                     length = ((byte[])data).length;
                     break;
@@ -1002,6 +1196,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
                     length = ((int[])data).length;
                     break;
                 case EncodingAlgorithmIndexes.LONG:
+                case EncodingAlgorithmIndexes.UUID:
                     length = ((long[])data).length;
                     break;
                 case EncodingAlgorithmIndexes.BOOLEAN:
@@ -1013,13 +1208,10 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
                 case EncodingAlgorithmIndexes.DOUBLE:
                     length = ((double[])data).length;
                     break;
-                case EncodingAlgorithmIndexes.UUID:
-                    length = ((long[])data).length;
-                    break;
                 case EncodingAlgorithmIndexes.CDATA:
                     throw new UnsupportedOperationException(CommonResourceBundle.getInstance().getString("message.CDATA"));
                 default:
-                    throw new EncodingAlgorithmException(CommonResourceBundle.getInstance().getString("message.UnsupportedBuiltInAlgorithm", new Object[]{new Integer(id)}));
+                    throw new EncodingAlgorithmException(CommonResourceBundle.getInstance().getString("message.UnsupportedBuiltInAlgorithm", new Object[]{Integer.valueOf(id)}));
             }
             encodeAIIBuiltInAlgorithmData(id, data, 0, length);
         } else if (id >= EncodingConstants.ENCODING_ALGORITHM_APPLICATION_START) {
@@ -1035,7 +1227,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     }
 
     /**
-     * Encode the [normalized value] of an Attribute Information Item using
+     * Encode the [normalized value] of an Attribute Information Item using 
      * using an encoding algorithm.
      * Implementation of clause C.14 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
@@ -1059,7 +1251,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     }
 
     /**
-     * Encode the [normalized value] of an Attribute Information Item using
+     * Encode the [normalized value] of an Attribute Information Item using 
      * using an encoding algorithm.
      * Implementation of clause C.14 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
@@ -1083,13 +1275,13 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     }
 
     /**
-     * Encode the [normalized value] of an Attribute Information Item using
+     * Encode the [normalized value] of an Attribute Information Item using 
      * using a built in encoding algorithm.
      * Implementation of clause C.14 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
      * @param id the built in encoding algorithm identifier.
      * @param data the data to be encoded using an encoding algorithm. The data
-     *        represents an array of items specified by the encoding algorithm
+     *        represents an array of items specified by the encoding algorithm 
      *        identifier
      * @param offset the offset into the array of bytes.
      * @param length the length of bytes.
@@ -1112,7 +1304,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
                 encodeToBytes(data, offset, length, _octetBuffer, _octetBufferIndex);
         _octetBufferIndex += octetLength;
     }
-
+    
     /**
      * Encode a non identifying string on the third bit of an octet.
      * Implementation of clause C.15 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
@@ -1123,7 +1315,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      * @param map the vocabulary table of character arrays to indexes.
      * @param addToTable true if the array of characters should be added to the vocabulary
      *                   table (if not already present in the table).
-     * @param clone true if the array of characters should be cloned if added
+     * @param clone true if the array of characters should be cloned if added 
      *              to the vocabulary table.
      */
     protected final void encodeNonIdentifyingStringOnThirdBit(char[] ch, int offset, int length,
@@ -1133,7 +1325,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
         if (addToTable) {
             int index = map.obtainIndex(ch, offset, length, clone);
             if (index == KeyIntMap.NOT_PRESENT) {
-                _b = EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG |
+                _b = EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG | 
                         _nonIdentifyingStringOnThirdBitCES;
                 encodeNonEmptyCharacterStringOnSeventhBit(ch, offset, length);
             } else {
@@ -1155,7 +1347,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      *            encoding algorithm identifier takes precendence.
      * @param id the encoding algorithm identifier.
      * @param data the data to be encoded using an encoding algorithm.
-     * @throws EncodingAlgorithmException if the encoding algorithm URI is not
+     * @throws EncodingAlgorithmException if the encoding algorithm URI is not 
      *         present in the vocabulary, or the encoding algorithm identifier
      *         is not with the required range.
      */
@@ -1182,8 +1374,6 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
             int length = 0;
             switch(id) {
                 case EncodingAlgorithmIndexes.HEXADECIMAL:
-                    length = ((byte[])data).length;
-                    break;
                 case EncodingAlgorithmIndexes.BASE64:
                     length = ((byte[])data).length;
                     break;
@@ -1194,7 +1384,8 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
                     length = ((int[])data).length;
                     break;
                 case EncodingAlgorithmIndexes.LONG:
-                    length = ((int[])data).length;
+                case EncodingAlgorithmIndexes.UUID:
+                    length = ((long[])data).length;
                     break;
                 case EncodingAlgorithmIndexes.BOOLEAN:
                     length = ((boolean[])data).length;
@@ -1205,13 +1396,10 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
                 case EncodingAlgorithmIndexes.DOUBLE:
                     length = ((double[])data).length;
                     break;
-                case EncodingAlgorithmIndexes.UUID:
-                    length = ((int[])data).length;
-                    break;
                 case EncodingAlgorithmIndexes.CDATA:
                     throw new UnsupportedOperationException(CommonResourceBundle.getInstance().getString("message.CDATA"));
                 default:
-                    throw new EncodingAlgorithmException(CommonResourceBundle.getInstance().getString("message.UnsupportedBuiltInAlgorithm", new Object[]{new Integer(id)}));
+                    throw new EncodingAlgorithmException(CommonResourceBundle.getInstance().getString("message.UnsupportedBuiltInAlgorithm", new Object[]{Integer.valueOf(id)}));
             }
             encodeCIIBuiltInAlgorithmData(id, data, 0, length);
         } else if (id >= EncodingConstants.ENCODING_ALGORITHM_APPLICATION_START) {
@@ -1237,7 +1425,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      * @param d the data, as an array of bytes, to be encoded.
      * @param offset the offset into the array of bytes.
      * @param length the length of bytes.
-     * @throws EncodingAlgorithmException if the encoding algorithm URI is not
+     * @throws EncodingAlgorithmException if the encoding algorithm URI is not 
      *         present in the vocabulary.
      */
     protected final void encodeNonIdentifyingStringOnThirdBit(String URI, int id, byte[] d, int offset, int length) throws FastInfosetException, IOException {
@@ -1253,7 +1441,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     }
 
     /**
-     * Encode a chunk of Character Information Items using
+     * Encode a chunk of Character Information Items using 
      * using an encoding algorithm.
      * Implementation of clause C.15 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
@@ -1277,7 +1465,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     }
 
     /**
-     * Encode a chunk of Character Information Items using
+     * Encode a chunk of Character Information Items using 
      * using an encoding algorithm.
      * Implementation of clause C.15 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
@@ -1301,13 +1489,13 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     }
 
     /**
-     * Encode a chunk of Character Information Items using
+     * Encode a chunk of Character Information Items using 
      * using an encoding algorithm.
      * Implementation of clause C.15 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
      * @param id the built in encoding algorithm identifier.
      * @param data the data to be encoded using an encoding algorithm. The data
-     *        represents an array of items specified by the encoding algorithm
+     *        represents an array of items specified by the encoding algorithm 
      *        identifier
      * @param offset the offset into the array of bytes.
      * @param length the length of bytes.
@@ -1332,7 +1520,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     }
 
     /**
-     * Encode a chunk of Character Information Items using
+     * Encode a chunk of Character Information Items using 
      * using the CDATA built in encoding algorithm.
      * Implementation of clause C.15 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
@@ -1347,18 +1535,18 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
         // Encode bottom 6 bits of enoding algorithm id
         _b = EncodingAlgorithmIndexes.CDATA << 2;
 
-
+        
         length = encodeUTF8String(ch, offset, length);
         encodeNonZeroOctetStringLengthOnSenventhBit(length);
         write(_encodingBuffer, length);
     }
-
+    
     /**
      * Encode a non empty identifying string on the first bit of an octet.
      * Implementation of clause C.13 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
      * @param s the identifying string.
-     * @param map the vocabulary table to use to determin the index of the
+     * @param map the vocabulary table to use to determin the index of the 
      *        identifying string
      */
     protected final void encodeIdentifyingNonEmptyStringOnFirstBit(String s, StringIntMap map) throws IOException {
@@ -1373,7 +1561,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     }
 
     /**
-     * Encode a non empty string on the second bit of an octet using the UTF-8
+     * Encode a non empty string on the second bit of an octet using the UTF-8 
      * encoding.
      * Implementation of clause C.22 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
@@ -1411,7 +1599,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     }
 
     /**
-     * Encode a non empty string on the fifth bit of an octet using the UTF-8
+     * Encode a non empty string on the fifth bit of an octet using the UTF-8 
      * or UTF-16 encoding.
      * Implementation of clause C.23 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
@@ -1424,7 +1612,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     }
 
     /**
-     * Encode a non empty string on the fifth bit of an octet using the UTF-8
+     * Encode a non empty string on the fifth bit of an octet using the UTF-8 
      * or UTF-16 encoding.
      * Implementation of clause C.23 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
@@ -1465,7 +1653,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     }
 
     /**
-     * Encode a non empty string on the seventh bit of an octet using the UTF-8
+     * Encode a non empty string on the seventh bit of an octet using the UTF-8 
      * or UTF-16 encoding.
      * Implementation of clause C.24 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
@@ -1480,8 +1668,8 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     }
 
     /**
-     * Encode a non empty string on the seventh bit of an octet using a restricted
-     * alphabet that results in the encoding of a character in 4 bits
+     * Encode a non empty string on the seventh bit of an octet using a restricted 
+     * alphabet that results in the encoding of a character in 4 bits 
      * (or two characters per octet).
      * Implementation of clause C.24 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
@@ -1493,10 +1681,14 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     protected final void encodeNonEmptyFourBitCharacterStringOnSeventhBit(int[] table, char[] ch, int offset, int length) throws FastInfosetException, IOException {
         final int octetPairLength = length / 2;
         final int octetSingleLength = length % 2;
-
+        
         // Encode the length
         encodeNonZeroOctetStringLengthOnSenventhBit(octetPairLength + octetSingleLength);
-
+        encodeNonEmptyFourBitCharacterString(table, ch, offset, octetPairLength, octetSingleLength);
+    }
+    
+    protected final void encodeNonEmptyFourBitCharacterString(int[] table, char[] ch, int offset, 
+            int octetPairLength, int octetSingleLength) throws FastInfosetException, IOException {
         ensureSize(octetPairLength + octetSingleLength);
         // Encode all pairs
         int v = 0;
@@ -1514,11 +1706,11 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
                 throw new FastInfosetException(CommonResourceBundle.getInstance().getString("message.characterOutofAlphabetRange"));
             }
             _octetBuffer[_octetBufferIndex++] = (byte)v;
-        }
+        }        
     }
-
+    
     /**
-     * Encode a non empty string on the seventh bit of an octet using a restricted
+     * Encode a non empty string on the seventh bit of an octet using a restricted 
      * alphabet table.
      * Implementation of clause C.24 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
      *
@@ -1533,13 +1725,12 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
         while ((1 << bitsPerCharacter) <= alphabet.length()) {
             bitsPerCharacter++;
         }
-        final int terminatingValue = (1 << bitsPerCharacter) - 1;
-
+        
         final int bits = length * bitsPerCharacter;
         final int octets = bits / 8;
         final int bitsOfLastOctet = bits % 8;
         final int totalOctets = octets + ((bitsOfLastOctet > 0) ? 1 : 0);
-
+        
         // Encode the length
         encodeNonZeroOctetStringLengthOnSenventhBit(totalOctets);
 
@@ -1557,9 +1748,9 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
             if (v == alphabet.length()) {
                 throw new FastInfosetException(CommonResourceBundle.getInstance().getString("message.characterOutofAlphabetRange"));
             }
-            writeBits(bitsPerCharacter, v);
-        }
-
+            writeBits(bitsPerCharacter, v);            
+        }        
+        
         if (bitsOfLastOctet > 0) {
             _b |= (1 << (8 - bitsOfLastOctet)) - 1;
             write(_b);
@@ -1572,7 +1763,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
         _bitsLeftInOctet = 8;
         _b = 0;
     }
-
+    
     private final void writeBits(int bits, int v) throws IOException {
         while (bits > 0) {
             final int bit = (v & (1 << --bits)) > 0 ? 1 : 0;
@@ -1584,7 +1775,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
             }
         }
     }
-
+    
     /**
      * Encode the length of a encoded string on the seventh bit
      * of an octet.
@@ -1615,14 +1806,14 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      * Encode a non zero integer on the second bit of an octet, setting
      * the first bit to 1.
      * Implementation of clause C.24 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
-     *
+     * 
      * <p>
-     * The first bit of the first octet is set, as specified in clause C.13 of
+     * The first bit of the first octet is set, as specified in clause C.13 of 
      * ITU-T Rec. X.891 | ISO/IEC 24824-1
      *
-     * @param i The integer to encode, which is a member of the interval
+     * @param i The integer to encode, which is a member of the interval 
      *          [0, 1048575]. In the specification the interval is [1, 1048576]
-     *
+     * 
      */
     protected final void encodeNonZeroIntegerOnSecondBitFirstBitOne(int i) throws IOException {
         if (i < EncodingConstants.INTEGER_2ND_BIT_SMALL_LIMIT) {
@@ -1635,7 +1826,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
             // _b = 0xC0 | (i >> 8); // 010 00000
             write(_b);
             write(i & 0xFF);
-        } else {
+        } else if (i < EncodingConstants.INTEGER_2ND_BIT_LARGE_LIMIT) {
             // [8257, 1048576] ( [8256, 1048575] ) 20 bits
             i -= EncodingConstants.INTEGER_2ND_BIT_MEDIUM_LIMIT;
             _b = (0x80 | EncodingConstants.INTEGER_2ND_BIT_LARGE_FLAG) | (i >> 16); // 0110 0000
@@ -1643,6 +1834,10 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
             write(_b);
             write((i >> 8) & 0xFF);
             write(i & 0xFF);
+        } else {
+            throw new IOException(
+                    CommonResourceBundle.getInstance().getString("message.integerMaxSize", 
+                    new Object[]{Integer.valueOf(EncodingConstants.INTEGER_2ND_BIT_LARGE_LIMIT)}));
         }
     }
 
@@ -1650,14 +1845,14 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      * Encode a non zero integer on the second bit of an octet, setting
      * the first bit to 0.
      * Implementation of clause C.25 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
-     *
+     * 
      * <p>
-     * The first bit of the first octet is set, as specified in clause C.13 of
+     * The first bit of the first octet is set, as specified in clause C.13 of 
      * ITU-T Rec. X.891 | ISO/IEC 24824-1
      *
-     * @param i The integer to encode, which is a member of the interval
+     * @param i The integer to encode, which is a member of the interval 
      *          [0, 1048575]. In the specification the interval is [1, 1048576]
-     *
+     * 
      */
     protected final void encodeNonZeroIntegerOnSecondBitFirstBitZero(int i) throws IOException {
         if (i < EncodingConstants.INTEGER_2ND_BIT_SMALL_LIMIT) {
@@ -1682,10 +1877,10 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     /**
      * Encode a non zero integer on the third bit of an octet.
      * Implementation of clause C.27 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
-     *
-     * @param i The integer to encode, which is a member of the interval
+     * 
+     * @param i The integer to encode, which is a member of the interval 
      *          [0, 1048575]. In the specification the interval is [1, 1048576]
-     *
+     * 
      */
     protected final void encodeNonZeroIntegerOnThirdBit(int i) throws IOException {
         if (i < EncodingConstants.INTEGER_3RD_BIT_SMALL_LIMIT) {
@@ -1718,10 +1913,10 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
     /**
      * Encode a non zero integer on the fourth bit of an octet.
      * Implementation of clause C.28 of ITU-T Rec. X.891 | ISO/IEC 24824-1.
-     *
-     * @param i The integer to encode, which is a member of the interval
+     * 
+     * @param i The integer to encode, which is a member of the interval 
      *          [0, 1048575]. In the specification the interval is [1, 1048576]
-     *
+     * 
      */
     protected final void encodeNonZeroIntegerOnFourthBit(int i) throws IOException {
         if (i < EncodingConstants.INTEGER_4TH_BIT_SMALL_LIMIT) {
@@ -1753,7 +1948,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
 
     /**
      * Encode a non empty string using the UTF-8 encoding.
-     *
+     * 
      * @param b the current octet that is being written.
      * @param s the string to be UTF-8 encoded.
      * @param constants the array of constants to use when encoding to determin
@@ -1766,7 +1961,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
 
     /**
      * Encode a non empty string using the UTF-8 encoding.
-     *
+     * 
      * @param b the current octet that is being written.
      * @param ch the array of characters.
      * @param offset the offset into the array of characters.
@@ -1783,7 +1978,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
 
     /**
      * Encode the length of non empty UTF-8 encoded string.
-     *
+     * 
      * @param b the current octet that is being written.
      * @param length the length of the UTF-8 encoded string.
      *        how the length of the UTF-8 encoded string is encoded.
@@ -1808,7 +2003,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
 
     /**
      * Encode a non zero integer.
-     *
+     * 
      * @param b the current octet that is being written.
      * @param i the non zero integer.
      * @param constants the array of constants to use when encoding to determin
@@ -1833,24 +2028,32 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
             write((i >> 8) & 0xFF);
             write(i & 0xFF);
         } else {
-            throw new IOException(CommonResourceBundle.getInstance().getString("message.integerMaxSize", new Object[]{new Integer(EncodingConstants.INTEGER_MAXIMUM_SIZE)}));
+            throw new IOException(CommonResourceBundle.getInstance().getString("message.integerMaxSize", new Object[]{Integer.valueOf(EncodingConstants.INTEGER_MAXIMUM_SIZE)}));
         }
     }
 
     /**
      * Mark the current position in the buffered stream.
      */
-    protected final void mark() throws IOException {
+    protected final void mark() {
         _markIndex = _octetBufferIndex;
     }
 
     /**
      * Reset the marked position in the buffered stream.
      */
-    protected final void resetMark() throws IOException {
+    protected final void resetMark() {
         _markIndex = -1;
     }
 
+    /**
+     * @return true if the mark has been set, otherwise false if the mark
+     *         has not been set.
+     */
+    protected final boolean hasMark() {
+        return _markIndex != -1;
+    }
+    
     /**
      * Write a byte to the buffered stream.
      */
@@ -1922,13 +2125,13 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
         }
     }
 
-
+    
     private EncodingBufferOutputStream _encodingBufferOutputStream = new EncodingBufferOutputStream();
 
     private byte[] _encodingBuffer = new byte[512];
 
     private int _encodingBufferIndex;
-
+    
     private class EncodingBufferOutputStream extends OutputStream {
 
         public void write(int b) throws IOException {
@@ -1984,14 +2187,14 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
             return encodeUTF8String(ch, 0, length);
         }
     }
-
+        
     private void ensureEncodingBufferSizeForUtf8String(int length) {
         final int newLength = 4 * length;
         if (_encodingBuffer.length < newLength) {
             _encodingBuffer = new byte[newLength];
         }
     }
-
+    
     /**
      * Encode a string using the UTF-8 encoding.
      *
@@ -2018,7 +2221,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
                     (byte) (0xC0 | (c >> 6));    // first 5
                 _encodingBuffer[bpos++] =
                     (byte) (0x80 | (c & 0x3F));  // second 6
-            } else if (c <= '\uFFFF') {
+            } else if (c <= '\uFFFF') { 
                 if (!XMLChar.isHighSurrogate(c) && !XMLChar.isLowSurrogate(c)) {
                     // 3 bytes, 16 bits
                     _encodingBuffer[bpos++] =
@@ -2038,17 +2241,17 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
 
         return bpos;
     }
-
+    
     private void encodeCharacterAsUtf8FourByte(int c, char[] ch, int chpos, int chend, int bpos) throws IOException {
         if (chpos == chend) {
             throw new IOException("");
         }
-
+        
         final char d = ch[chpos];
         if (!XMLChar.isLowSurrogate(d)) {
             throw new IOException("");
         }
-
+        
         final int uc = (((c & 0x3ff) << 10) | (d & 0x3ff)) + 0x10000;
         if (uc < 0 || uc >= 0x200000) {
             throw new IOException("");
@@ -2075,7 +2278,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
             return encodeUtf16String(ch, 0, length);
         }
     }
-
+        
     private void ensureEncodingBufferSizeForUtf16String(int length) {
         final int newLength = 2 * length;
         if (_encodingBuffer.length < newLength) {
@@ -2105,7 +2308,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
 
         return byteLength;
     }
-
+    
     /**
      * Obtain the prefix from a qualified name.
      *
@@ -2120,7 +2323,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
         }
         return prefix;
     }
-
+    
     /**
      * Check if character array contains characters that are all white space.
      *
@@ -2131,13 +2334,13 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      */
     public static boolean isWhiteSpace(final char[] ch, int start, final int length) {
         if (!XMLChar.isSpace(ch[start])) return false;
-
+        
         final int end = start + length;
-        start++;
-        while(start < end && XMLChar.isSpace(ch[start++]));
+        while(++start < end && XMLChar.isSpace(ch[start]));
+        
         return start == end;
     }
-
+    
     /**
      * Check if a String contains characters that are all white space.
      *
@@ -2146,7 +2349,7 @@ public abstract class Encoder extends DefaultHandler implements FastInfosetSeria
      */
     public static boolean isWhiteSpace(String s) {
         if (!XMLChar.isSpace(s.charAt(0))) return false;
-
+        
         final int end = s.length();
         int start = 1;
         while(start < end && XMLChar.isSpace(s.charAt(start++)));
