@@ -1,5 +1,5 @@
 /*
- * Copyright 2006 Sun Microsystems, Inc.  All Rights Reserved.
+ * Copyright 2005-2006 Sun Microsystems, Inc.  All Rights Reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,34 +23,6 @@
  * have any questions.
  *
  * THIS FILE WAS MODIFIED BY SUN MICROSYSTEMS, INC.
- */
-
-/*
- * Copyright 2006 Sun Microsystems, Inc.  All Rights Reserved.
- * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
- *
- * This code is free software; you can redistribute it and/or modify it
- * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Sun designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Sun in the LICENSE file that accompanied this code.
- *
- * This code is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
- * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
- * version 2 for more details (a copy is included in the LICENSE file that
- * accompanied this code).
- *
- * You should have received a copy of the GNU General Public License version
- * 2 along with this work; if not, write to the Free Software Foundation,
- * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
- *
- * Please contact Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
- * CA 95054 USA or visit www.sun.com if you need additional information or
- * have any questions.
- *
- * THIS FILE WAS MODIFIED BY SUN MICROSYSTEMS, INC.
- *
  */
 
 package com.sun.xml.internal.fastinfoset.sax;
@@ -91,11 +63,11 @@ import org.xml.sax.ext.DeclHandler;
 /**
  * The Fast Infoset SAX parser.
  * <p>
- * Instantiate this parser to parse a fast infoset document in accordance
+ * Instantiate this parser to parse a fast infoset document in accordance 
  * with the SAX API.
- *
+ * 
  * <p>
- * More than one fast infoset document may be decoded from the
+ * More than one fast infoset document may be decoded from the 
  * {@link java.io.InputStream}.
  */
 public class SAXDocumentParser extends Decoder implements FastInfosetReader {
@@ -106,17 +78,17 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
      */
     private static final class LexicalHandlerImpl implements LexicalHandler {
         public void comment(char[] ch, int start, int end) { }
-
+        
         public void startDTD(String name, String publicId, String systemId) { }
         public void endDTD() { }
 
         public void startEntity(String name) { }
         public void endEntity(String name) { }
-
+        
         public void startCDATA() { }
         public void endCDATA() { }
     };
-
+    
     /*
      * Empty DTD declaration handler used by default to report
      * DTD declaration-based events
@@ -125,74 +97,74 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
         public void elementDecl(String name, String model) throws SAXException {
         }
 
-        public void attributeDecl(String eName, String aName,
+        public void attributeDecl(String eName, String aName, 
                 String type, String mode, String value) throws SAXException {
         }
 
-        public void internalEntityDecl(String name,
+        public void internalEntityDecl(String name, 
                 String value) throws SAXException {
         }
 
-        public void externalEntityDecl(String name,
+        public void externalEntityDecl(String name, 
                 String publicId, String systemId) throws SAXException {
         }
     }
-
+    
     /**
      * SAX Namespace attributes features
      */
     protected boolean _namespacePrefixesFeature = false;
-
+    
     /**
      * Reference to entity resolver.
      */
     protected EntityResolver _entityResolver;
-
+    
     /**
      * Reference to dtd handler.
      */
     protected DTDHandler _dtdHandler;
-
+    
     /**
      * Reference to content handler.
      */
     protected ContentHandler _contentHandler;
-
+    
     /**
      * Reference to error handler.
      */
     protected ErrorHandler _errorHandler;
-
+    
     /**
      * Reference to lexical handler.
      */
     protected LexicalHandler _lexicalHandler;
-
+    
     /**
      * Reference to DTD declaration handler.
      */
     protected DeclHandler _declHandler;
-
+    
     protected EncodingAlgorithmContentHandler _algorithmHandler;
-
+    
     protected PrimitiveTypeContentHandler _primitiveHandler;
-
+        
     protected BuiltInEncodingAlgorithmState builtInAlgorithmState =
             new BuiltInEncodingAlgorithmState();
-
+    
     protected AttributesHolder _attributes;
-
+    
     protected int[] _namespacePrefixes = new int[16];
-
+    
     protected int _namespacePrefixesIndex;
-
+    
     protected boolean _clearAttributes = false;
-
+    
     /** Creates a new instance of DocumetParser2 */
     public SAXDocumentParser() {
         DefaultHandler handler = new DefaultHandler();
         _attributes = new AttributesHolder(_registeredEncodingAlgorithms);
-
+        
         _entityResolver = handler;
         _dtdHandler = handler;
         _contentHandler = handler;
@@ -200,7 +172,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
         _lexicalHandler = new LexicalHandlerImpl();
         _declHandler = new DeclHandlerImpl();
     }
-
+    
     protected void resetOnError() {
         _clearAttributes = false;
         _attributes.clear();
@@ -211,9 +183,9 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
         }
         _duplicateAttributeVerifier.clear();
     }
-
+    
     // XMLReader interface
-
+    
     public boolean getFeature(String name)
     throws SAXNotRecognizedException, SAXNotSupportedException {
         if (name.equals(Features.NAMESPACES_FEATURE)) {
@@ -228,7 +200,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     CommonResourceBundle.getInstance().getString("message.featureNotSupported") + name);
         }
     }
-
+    
     public void setFeature(String name, boolean value)
     throws SAXNotRecognizedException, SAXNotSupportedException {
         if (name.equals(Features.NAMESPACES_FEATURE)) {
@@ -245,7 +217,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     CommonResourceBundle.getInstance().getString("message.featureNotSupported") + name);
         }
     }
-
+    
     public Object getProperty(String name)
     throws SAXNotRecognizedException, SAXNotSupportedException {
         if (name.equals(Properties.LEXICAL_HANDLER_PROPERTY)) {
@@ -265,7 +237,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     getString("message.propertyNotRecognized", new Object[]{name}));
         }
     }
-
+    
     public void setProperty(String name, Object value)
     throws SAXNotRecognizedException, SAXNotSupportedException {
         if (name.equals(Properties.LEXICAL_HANDLER_PROPERTY)) {
@@ -279,7 +251,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 setDeclHandler((DeclHandler)value);
             } else {
                 throw new SAXNotSupportedException(Properties.LEXICAL_HANDLER_PROPERTY);
-            }
+            }            
         } else if (name.equals(FastInfosetReader.EXTERNAL_VOCABULARIES_PROPERTY)) {
             if (value instanceof Map) {
                 setExternalVocabularies((Map)value);
@@ -315,38 +287,38 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     getString("message.propertyNotRecognized", new Object[]{name}));
         }
     }
-
+    
     public void setEntityResolver(EntityResolver resolver) {
         _entityResolver = resolver;
     }
-
+    
     public EntityResolver getEntityResolver() {
         return _entityResolver;
     }
-
+    
     public void setDTDHandler(DTDHandler handler) {
         _dtdHandler = handler;
     }
-
+    
     public DTDHandler getDTDHandler() {
         return _dtdHandler;
     }
     public void setContentHandler(ContentHandler handler) {
         _contentHandler = handler;
     }
-
+    
     public ContentHandler getContentHandler() {
         return _contentHandler;
     }
-
+    
     public void setErrorHandler(ErrorHandler handler) {
         _errorHandler = handler;
     }
-
+    
     public ErrorHandler getErrorHandler() {
         return _errorHandler;
     }
-
+    
     public void parse(InputSource input) throws IOException, SAXException {
         try {
             InputStream s = input.getByteStream();
@@ -364,7 +336,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
             throw new SAXException(e);
         }
     }
-
+    
     public void parse(String systemId) throws IOException, SAXException {
         try {
             systemId = SystemIdResolver.getAbsoluteURI(systemId);
@@ -374,61 +346,64 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
             throw new SAXException(e);
         }
     }
-
-
-
-
+    
+    
+    
+    
     // FastInfosetReader
-
+    
     public final void parse(InputStream s) throws IOException, FastInfosetException, SAXException {
         setInputStream(s);
         parse();
     }
-
+        
     public void setLexicalHandler(LexicalHandler handler) {
         _lexicalHandler = handler;
     }
-
+    
     public LexicalHandler getLexicalHandler() {
         return _lexicalHandler;
     }
-
+    
     public void setDeclHandler(DeclHandler handler) {
         _declHandler = handler;
     }
-
+    
     public DeclHandler getDeclHandler() {
         return _declHandler;
     }
-
+    
     public void setEncodingAlgorithmContentHandler(EncodingAlgorithmContentHandler handler) {
         _algorithmHandler = handler;
     }
-
+    
     public EncodingAlgorithmContentHandler getEncodingAlgorithmContentHandler() {
         return _algorithmHandler;
     }
-
+    
     public void setPrimitiveTypeContentHandler(PrimitiveTypeContentHandler handler) {
         _primitiveHandler = handler;
     }
-
+    
     public PrimitiveTypeContentHandler getPrimitiveTypeContentHandler() {
         return _primitiveHandler;
     }
-
-
-
-
+    
+    
+    
+    
     public final void parse() throws FastInfosetException, IOException {
         if (_octetBuffer.length < _bufferSize) {
             _octetBuffer = new byte[_bufferSize];
         }
-
+        
         try {
             reset();
             decodeHeader();
-            processDII();
+            if (_parseFragments)
+                processDIIFragment();
+            else 
+                processDII();
         } catch (RuntimeException e) {
             try {
                 _errorHandler.fatalError(new SAXParseException(e.getClass().getName(), null, e));
@@ -453,19 +428,19 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
             throw e;
         }
     }
-
+    
     protected final void processDII() throws FastInfosetException, IOException {
         try {
             _contentHandler.startDocument();
         } catch (SAXException e) {
             throw new FastInfosetException("processDII", e);
         }
-
+                
         _b = read();
         if (_b > 0) {
             processDIIOptionalProperties();
         }
-
+        
         // Decode one Document Type II, Comment IIs, PI IIs and one EII
         boolean firstElementHasOccured = false;
         boolean documentTypeDeclarationOccured = false;
@@ -491,7 +466,8 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 case DecoderStateTables.EII_LITERAL:
                 {
                     final QualifiedName qn = decodeLiteralQualifiedName(
-                                _b & EncodingConstants.LITERAL_QNAME_PREFIX_NAMESPACE_NAME_MASK);
+                                _b & EncodingConstants.LITERAL_QNAME_PREFIX_NAMESPACE_NAME_MASK,
+                                _elementNameTable.getNext());
                     _elementNameTable.add(qn);
                     processEII(qn, (_b & EncodingConstants.ELEMENT_ATTRIBUTE_FLAG) > 0);
                     firstElementHasOccured = true;
@@ -507,17 +483,16 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                         throw new FastInfosetException(CommonResourceBundle.getInstance().getString("message.secondOccurenceOfDTDII"));
                     }
                     documentTypeDeclarationOccured = true;
-
+                    
                     String system_identifier = ((_b & EncodingConstants.DOCUMENT_TYPE_SYSTEM_IDENTIFIER_FLAG) > 0)
                     ? decodeIdentifyingNonEmptyStringOnFirstBit(_v.otherURI) : "";
                     String public_identifier = ((_b & EncodingConstants.DOCUMENT_TYPE_PUBLIC_IDENTIFIER_FLAG) > 0)
                     ? decodeIdentifyingNonEmptyStringOnFirstBit(_v.otherURI) : "";
-
+                    
                     _b = read();
                     while (_b == EncodingConstants.PROCESSING_INSTRUCTION) {
                         switch(decodeNonIdentifyingStringOnFirstBit()) {
                             case NISTRING_STRING:
-                                final String data = new String(_charBuffer, 0, _charBufferLength);
                                 if (_addToTable) {
                                     _v.otherString.add(new CharArray(_charBuffer, 0, _charBufferLength, true));
                                 }
@@ -537,9 +512,9 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     if (_b == EncodingConstants.DOUBLE_TERMINATOR) {
                         _terminate = true;
                     }
-
-                    _notations.clear();
-                    _unparsedEntities.clear();
+                    
+                    if (_notations != null) _notations.clear();
+                    if (_unparsedEntities != null) _unparsedEntities.clear();
                     /*
                      * TODO
                      * Report All events associated with DTD, PIs, notations etc
@@ -561,7 +536,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     throw new FastInfosetException(CommonResourceBundle.getInstance().getString("message.IllegalStateDecodingDII"));
             }
         }
-
+        
         // Decode any remaining Comment IIs, PI IIs
         while(!_terminate) {
             _b = read();
@@ -581,101 +556,26 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     throw new FastInfosetException(CommonResourceBundle.getInstance().getString("message.IllegalStateDecodingDII"));
             }
         }
-
+        
         try {
             _contentHandler.endDocument();
         } catch (SAXException e) {
             throw new FastInfosetException("processDII", e);
         }
     }
-
-    protected final void processDIIOptionalProperties() throws FastInfosetException, IOException {
-        // Optimize for the most common case
-        if (_b == EncodingConstants.DOCUMENT_INITIAL_VOCABULARY_FLAG) {
-            decodeInitialVocabulary();
-            return;
-        }
-
-        if ((_b & EncodingConstants.DOCUMENT_ADDITIONAL_DATA_FLAG) > 0) {
-            decodeAdditionalData();
-            /*
-             * TODO
-             * how to report the additional data?
-             */
-        }
-
-        if ((_b & EncodingConstants.DOCUMENT_INITIAL_VOCABULARY_FLAG) > 0) {
-            decodeInitialVocabulary();
-        }
-
-        if ((_b & EncodingConstants.DOCUMENT_NOTATIONS_FLAG) > 0) {
-            decodeNotations();
-            /*
-                try {
-                    _dtdHandler.notationDecl(name, public_identifier, system_identifier);
-                } catch (SAXException e) {
-                    throw new IOException("NotationsDeclarationII");
-                }
-             */
-        }
-
-        if ((_b & EncodingConstants.DOCUMENT_UNPARSED_ENTITIES_FLAG) > 0) {
-            decodeUnparsedEntities();
-            /*
-                try {
-                    _dtdHandler.unparsedEntityDecl(name, public_identifier, system_identifier, notation_name);
-                } catch (SAXException e) {
-                    throw new IOException("UnparsedEntitiesII");
-                }
-             */
-        }
-
-        if ((_b & EncodingConstants.DOCUMENT_CHARACTER_ENCODING_SCHEME) > 0) {
-            String characterEncodingScheme = decodeCharacterEncodingScheme();
-            /*
-             * TODO
-             * how to report the character encoding scheme?
-             */
-        }
-
-        if ((_b & EncodingConstants.DOCUMENT_STANDALONE_FLAG) > 0) {
-            boolean standalone = (read() > 0) ? true : false ;
-            /*
-             * TODO
-             * how to report the standalone flag?
-             */
-        }
-
-        if ((_b & EncodingConstants.DOCUMENT_VERSION_FLAG) > 0) {
-            String version = decodeVersion();
-            /*
-             * TODO
-             * how to report the standalone flag?
-             */
-        }
-    }
-
-    protected final void processEII(QualifiedName name, boolean hasAttributes) throws FastInfosetException, IOException {
-        if (_prefixTable._currentInScope[name.prefixIndex] != name.namespaceNameIndex) {
-            throw new FastInfosetException(CommonResourceBundle.getInstance().getString("message.qNameOfEIINotInScope"));
-        }
-
-        if (hasAttributes) {
-            processAIIs();
-        }
-
+    
+    protected final void processDIIFragment() throws FastInfosetException, IOException {
         try {
-            _contentHandler.startElement(name.namespaceName, name.localName, name.qName, _attributes);
+            _contentHandler.startDocument();
         } catch (SAXException e) {
-            e.printStackTrace();
-            throw new FastInfosetException("processEII", e);
+            throw new FastInfosetException("processDII", e);
         }
-
-        if (_clearAttributes) {
-            _attributes.clear();
-            _clearAttributes = false;
+                
+        _b = read();
+        if (_b > 0) {
+            processDIIOptionalProperties();
         }
-
+        
         while(!_terminate) {
             _b = read();
             switch(DecoderStateTables.EII[_b]) {
@@ -694,7 +594,8 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 case DecoderStateTables.EII_LITERAL:
                 {
                     final QualifiedName qn = decodeLiteralQualifiedName(
-                                _b & EncodingConstants.LITERAL_QNAME_PREFIX_NAMESPACE_NAME_MASK);
+                                _b & EncodingConstants.LITERAL_QNAME_PREFIX_NAMESPACE_NAME_MASK,
+                                _elementNameTable.getNext());
                     _elementNameTable.add(qn);
                     processEII(qn, (_b & EncodingConstants.ELEMENT_ATTRIBUTE_FLAG) > 0);
                     break;
@@ -705,29 +606,11 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 case DecoderStateTables.CII_UTF8_SMALL_LENGTH:
                     _octetBufferLength = (_b & EncodingConstants.OCTET_STRING_LENGTH_7TH_BIT_SMALL_MASK)
                     + 1;
-                    decodeUtf8StringAsCharBuffer();
-                    if ((_b & EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG) > 0) {
-                        _characterContentChunkTable.add(_charBuffer, _charBufferLength);
-                    }
-
-                    try {
-                        _contentHandler.characters(_charBuffer, 0, _charBufferLength);
-                    } catch (SAXException e) {
-                        throw new FastInfosetException("processCII", e);
-                    }
+                    processUtf8CharacterString();
                     break;
                 case DecoderStateTables.CII_UTF8_MEDIUM_LENGTH:
                     _octetBufferLength = read() + EncodingConstants.OCTET_STRING_LENGTH_7TH_BIT_SMALL_LIMIT;
-                    decodeUtf8StringAsCharBuffer();
-                    if ((_b & EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG) > 0) {
-                        _characterContentChunkTable.add(_charBuffer, _charBufferLength);
-                    }
-
-                    try {
-                        _contentHandler.characters(_charBuffer, 0, _charBufferLength);
-                    } catch (SAXException e) {
-                        throw new FastInfosetException("processCII", e);
-                    }
+                    processUtf8CharacterString();
                     break;
                 case DecoderStateTables.CII_UTF8_LARGE_LENGTH:
                     _octetBufferLength = ((read() << 24) |
@@ -735,16 +618,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                             (read() << 8) |
                             read())
                             + EncodingConstants.OCTET_STRING_LENGTH_7TH_BIT_MEDIUM_LIMIT;
-                    decodeUtf8StringAsCharBuffer();
-                    if ((_b & EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG) > 0) {
-                        _characterContentChunkTable.add(_charBuffer, _charBufferLength);
-                    }
-
-                    try {
-                        _contentHandler.characters(_charBuffer, 0, _charBufferLength);
-                    } catch (SAXException e) {
-                        throw new FastInfosetException("processCII", e);
-                    }
+                    processUtf8CharacterString();
                     break;
                 case DecoderStateTables.CII_UTF16_SMALL_LENGTH:
                     _octetBufferLength = (_b & EncodingConstants.OCTET_STRING_LENGTH_7TH_BIT_SMALL_MASK)
@@ -753,7 +627,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     if ((_b & EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG) > 0) {
                         _characterContentChunkTable.add(_charBuffer, _charBufferLength);
                     }
-
+                    
                     try {
                         _contentHandler.characters(_charBuffer, 0, _charBufferLength);
                     } catch (SAXException e) {
@@ -766,7 +640,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     if ((_b & EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG) > 0) {
                         _characterContentChunkTable.add(_charBuffer, _charBufferLength);
                     }
-
+                    
                     try {
                         _contentHandler.characters(_charBuffer, 0, _charBufferLength);
                     } catch (SAXException e) {
@@ -783,7 +657,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     if ((_b & EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG) > 0) {
                         _characterContentChunkTable.add(_charBuffer, _charBufferLength);
                     }
-
+                    
                     try {
                         _contentHandler.characters(_charBuffer, 0, _charBufferLength);
                     } catch (SAXException e) {
@@ -793,16 +667,16 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 case DecoderStateTables.CII_RA:
                 {
                     final boolean addToTable = (_b & EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG) > 0;
-
+                    
                     // Decode resitricted alphabet integer
                     _identifier = (_b & 0x02) << 6;
                     _b = read();
                     _identifier |= (_b & 0xFC) >> 2;
-
+                    
                     decodeOctetsOnSeventhBitOfNonIdentifyingStringOnThirdBit(_b);
-
+                    
                     decodeRestrictedAlphabetAsCharBuffer();
-
+                    
                     if (addToTable) {
                         _characterContentChunkTable.add(_charBuffer, _charBufferLength);
                     }
@@ -811,7 +685,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                         _contentHandler.characters(_charBuffer, 0, _charBufferLength);
                     } catch (SAXException e) {
                         throw new FastInfosetException("processCII", e);
-                    }
+                    }                    
                     break;
                 }
                 case DecoderStateTables.CII_EA:
@@ -819,14 +693,14 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     if ((_b & EncodingConstants.NISTRING_ADD_TO_TABLE_FLAG) > 0) {
                         throw new EncodingAlgorithmException(CommonResourceBundle.getInstance().getString("message.addToTableNotSupported"));
                     }
-
+                    
                     // Decode encoding algorithm integer
                     _identifier = (_b & 0x02) << 6;
                     _b = read();
                     _identifier |= (_b & 0xFC) >> 2;
-
+                    
                     decodeOctetsOnSeventhBitOfNonIdentifyingStringOnThirdBit(_b);
-
+                    
                     processCIIEncodingAlgorithm();
                     break;
                 }
@@ -834,8 +708,8 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 {
                     final int index = _b & EncodingConstants.INTEGER_4TH_BIT_SMALL_MASK;
                     try {
-                        _contentHandler.characters(_characterContentChunkTable._array,
-                                _characterContentChunkTable._offset[index],
+                        _contentHandler.characters(_characterContentChunkTable._array, 
+                                _characterContentChunkTable._offset[index], 
                                 _characterContentChunkTable._length[index]);
                     } catch (SAXException e) {
                         throw new FastInfosetException("processCII", e);
@@ -847,8 +721,8 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     final int index = (((_b & EncodingConstants.INTEGER_4TH_BIT_MEDIUM_MASK) << 8) | read())
                             + EncodingConstants.INTEGER_4TH_BIT_SMALL_LIMIT;
                     try {
-                        _contentHandler.characters(_characterContentChunkTable._array,
-                                _characterContentChunkTable._offset[index],
+                        _contentHandler.characters(_characterContentChunkTable._array, 
+                                _characterContentChunkTable._offset[index], 
                                 _characterContentChunkTable._length[index]);
                     } catch (SAXException e) {
                         throw new FastInfosetException("processCII", e);
@@ -859,12 +733,12 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 {
                     final int index = (((_b & EncodingConstants.INTEGER_4TH_BIT_LARGE_MASK) << 16) |
                             (read() << 8) |
-                            read())
+                            read()) 
                             + EncodingConstants.INTEGER_4TH_BIT_MEDIUM_LIMIT;
-
+                    
                     try {
-                        _contentHandler.characters(_characterContentChunkTable._array,
-                                _characterContentChunkTable._offset[index],
+                        _contentHandler.characters(_characterContentChunkTable._array, 
+                                _characterContentChunkTable._offset[index], 
                                 _characterContentChunkTable._length[index]);
                     } catch (SAXException e) {
                         throw new FastInfosetException("processCII", e);
@@ -875,12 +749,12 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 {
                     final int index = ((read() << 16) |
                             (read() << 8) |
-                            read())
+                            read()) 
                             + EncodingConstants.INTEGER_4TH_BIT_LARGE_LIMIT;
-
+                    
                     try {
-                        _contentHandler.characters(_characterContentChunkTable._array,
-                                _characterContentChunkTable._offset[index],
+                        _contentHandler.characters(_characterContentChunkTable._array, 
+                                _characterContentChunkTable._offset[index], 
                                 _characterContentChunkTable._length[index]);
                     } catch (SAXException e) {
                         throw new FastInfosetException("processCII", e);
@@ -896,12 +770,12 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 case DecoderStateTables.UNEXPANDED_ENTITY_REFERENCE_II:
                 {
                     String entity_reference_name = decodeIdentifyingNonEmptyStringOnFirstBit(_v.otherNCName);
-
+                    
                     String system_identifier = ((_b & EncodingConstants.UNEXPANDED_ENTITY_SYSTEM_IDENTIFIER_FLAG) > 0)
                     ? decodeIdentifyingNonEmptyStringOnFirstBit(_v.otherURI) : "";
                     String public_identifier = ((_b & EncodingConstants.UNEXPANDED_ENTITY_PUBLIC_IDENTIFIER_FLAG) > 0)
                     ? decodeIdentifyingNonEmptyStringOnFirstBit(_v.otherURI) : "";
-
+                    
                     try {
                         /*
                          * TODO
@@ -925,26 +799,365 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     throw new FastInfosetException(CommonResourceBundle.getInstance().getString("message.IllegalStateDecodingEII"));
             }
         }
+                
+        try {
+            _contentHandler.endDocument();
+        } catch (SAXException e) {
+            throw new FastInfosetException("processDII", e);
+        }
+    }
+    
+    protected final void processDIIOptionalProperties() throws FastInfosetException, IOException {
+        // Optimize for the most common case
+        if (_b == EncodingConstants.DOCUMENT_INITIAL_VOCABULARY_FLAG) {
+            decodeInitialVocabulary();
+            return;
+        }
+        
+        if ((_b & EncodingConstants.DOCUMENT_ADDITIONAL_DATA_FLAG) > 0) {
+            decodeAdditionalData();
+            /*
+             * TODO
+             * how to report the additional data?
+             */
+        }
+        
+        if ((_b & EncodingConstants.DOCUMENT_INITIAL_VOCABULARY_FLAG) > 0) {
+            decodeInitialVocabulary();
+        }
+        
+        if ((_b & EncodingConstants.DOCUMENT_NOTATIONS_FLAG) > 0) {
+            decodeNotations();
+            /*
+                try {
+                    _dtdHandler.notationDecl(name, public_identifier, system_identifier);
+                } catch (SAXException e) {
+                    throw new IOException("NotationsDeclarationII");
+                }
+             */
+        }
+        
+        if ((_b & EncodingConstants.DOCUMENT_UNPARSED_ENTITIES_FLAG) > 0) {
+            decodeUnparsedEntities();
+            /*
+                try {
+                    _dtdHandler.unparsedEntityDecl(name, public_identifier, system_identifier, notation_name);
+                } catch (SAXException e) {
+                    throw new IOException("UnparsedEntitiesII");
+                }
+             */
+        }
+        
+        if ((_b & EncodingConstants.DOCUMENT_CHARACTER_ENCODING_SCHEME) > 0) {
+            String characterEncodingScheme = decodeCharacterEncodingScheme();
+            /*
+             * TODO
+             * how to report the character encoding scheme?
+             */
+        }
+        
+        if ((_b & EncodingConstants.DOCUMENT_STANDALONE_FLAG) > 0) {
+            boolean standalone = (read() > 0) ? true : false ;
+            /*
+             * TODO
+             * how to report the standalone flag?
+             */
+        }
+        
+        if ((_b & EncodingConstants.DOCUMENT_VERSION_FLAG) > 0) {
+            decodeVersion();
+            /*
+             * TODO
+             * how to report the standalone flag?
+             */
+        }
+    }
+    
+    protected final void processEII(QualifiedName name, boolean hasAttributes) throws FastInfosetException, IOException {
+        if (_prefixTable._currentInScope[name.prefixIndex] != name.namespaceNameIndex) {
+            throw new FastInfosetException(CommonResourceBundle.getInstance().getString("message.qNameOfEIINotInScope"));
+        }
+        
+        if (hasAttributes) {
+            processAIIs();
+        }
+    
+        try {
+            _contentHandler.startElement(name.namespaceName, name.localName, name.qName, _attributes);
+        } catch (SAXException e) {
+            e.printStackTrace();
+            throw new FastInfosetException("processEII", e);
+        }
+        
+        if (_clearAttributes) {
+            _attributes.clear();
+            _clearAttributes = false;
+        }
+        
+        while(!_terminate) {
+            _b = read();
+            switch(DecoderStateTables.EII[_b]) {
+                case DecoderStateTables.EII_NO_AIIS_INDEX_SMALL:
+                    processEII(_elementNameTable._array[_b], false);
+                    break;
+                case DecoderStateTables.EII_AIIS_INDEX_SMALL:
+                    processEII(_elementNameTable._array[_b & EncodingConstants.INTEGER_3RD_BIT_SMALL_MASK], true);
+                    break;
+                case DecoderStateTables.EII_INDEX_MEDIUM:
+                    processEII(decodeEIIIndexMedium(), (_b & EncodingConstants.ELEMENT_ATTRIBUTE_FLAG) > 0);
+                    break;
+                case DecoderStateTables.EII_INDEX_LARGE:
+                    processEII(decodeEIIIndexLarge(), (_b & EncodingConstants.ELEMENT_ATTRIBUTE_FLAG) > 0);
+                    break;
+                case DecoderStateTables.EII_LITERAL:
+                {
+                    final QualifiedName qn = decodeLiteralQualifiedName(
+                                _b & EncodingConstants.LITERAL_QNAME_PREFIX_NAMESPACE_NAME_MASK,
+                                _elementNameTable.getNext());
+                    _elementNameTable.add(qn);
+                    processEII(qn, (_b & EncodingConstants.ELEMENT_ATTRIBUTE_FLAG) > 0);
+                    break;
+                }
+                case DecoderStateTables.EII_NAMESPACES:
+                    processEIIWithNamespaces();
+                    break;
+                case DecoderStateTables.CII_UTF8_SMALL_LENGTH:
+                    _octetBufferLength = (_b & EncodingConstants.OCTET_STRING_LENGTH_7TH_BIT_SMALL_MASK)
+                    + 1;
+                    processUtf8CharacterString();
+                    break;
+                case DecoderStateTables.CII_UTF8_MEDIUM_LENGTH:
+                    _octetBufferLength = read() + EncodingConstants.OCTET_STRING_LENGTH_7TH_BIT_SMALL_LIMIT;
+                    processUtf8CharacterString();
+                    break;
+                case DecoderStateTables.CII_UTF8_LARGE_LENGTH:
+                    _octetBufferLength = ((read() << 24) |
+                            (read() << 16) |
+                            (read() << 8) |
+                            read())
+                            + EncodingConstants.OCTET_STRING_LENGTH_7TH_BIT_MEDIUM_LIMIT;
+                    processUtf8CharacterString();
+                    break;
+                case DecoderStateTables.CII_UTF16_SMALL_LENGTH:
+                    _octetBufferLength = (_b & EncodingConstants.OCTET_STRING_LENGTH_7TH_BIT_SMALL_MASK)
+                    + 1;
+                    decodeUtf16StringAsCharBuffer();
+                    if ((_b & EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG) > 0) {
+                        _characterContentChunkTable.add(_charBuffer, _charBufferLength);
+                    }
+                    
+                    try {
+                        _contentHandler.characters(_charBuffer, 0, _charBufferLength);
+                    } catch (SAXException e) {
+                        throw new FastInfosetException("processCII", e);
+                    }
+                    break;
+                case DecoderStateTables.CII_UTF16_MEDIUM_LENGTH:
+                    _octetBufferLength = read() + EncodingConstants.OCTET_STRING_LENGTH_7TH_BIT_SMALL_LIMIT;
+                    decodeUtf16StringAsCharBuffer();
+                    if ((_b & EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG) > 0) {
+                        _characterContentChunkTable.add(_charBuffer, _charBufferLength);
+                    }
+                    
+                    try {
+                        _contentHandler.characters(_charBuffer, 0, _charBufferLength);
+                    } catch (SAXException e) {
+                        throw new FastInfosetException("processCII", e);
+                    }
+                    break;
+                case DecoderStateTables.CII_UTF16_LARGE_LENGTH:
+                    _octetBufferLength = ((read() << 24) |
+                            (read() << 16) |
+                            (read() << 8) |
+                            read())
+                            + EncodingConstants.OCTET_STRING_LENGTH_7TH_BIT_MEDIUM_LIMIT;
+                    decodeUtf16StringAsCharBuffer();
+                    if ((_b & EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG) > 0) {
+                        _characterContentChunkTable.add(_charBuffer, _charBufferLength);
+                    }
+                    
+                    try {
+                        _contentHandler.characters(_charBuffer, 0, _charBufferLength);
+                    } catch (SAXException e) {
+                        throw new FastInfosetException("processCII", e);
+                    }
+                    break;
+                case DecoderStateTables.CII_RA:
+                {
+                    final boolean addToTable = (_b & EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG) > 0;
+                    
+                    // Decode resitricted alphabet integer
+                    _identifier = (_b & 0x02) << 6;
+                    _b = read();
+                    _identifier |= (_b & 0xFC) >> 2;
+                    
+                    decodeOctetsOnSeventhBitOfNonIdentifyingStringOnThirdBit(_b);
+                    
+                    decodeRestrictedAlphabetAsCharBuffer();
+                    
+                    if (addToTable) {
+                        _characterContentChunkTable.add(_charBuffer, _charBufferLength);
+                    }
 
+                    try {
+                        _contentHandler.characters(_charBuffer, 0, _charBufferLength);
+                    } catch (SAXException e) {
+                        throw new FastInfosetException("processCII", e);
+                    }                    
+                    break;
+                }
+                case DecoderStateTables.CII_EA:
+                {
+                    if ((_b & EncodingConstants.NISTRING_ADD_TO_TABLE_FLAG) > 0) {
+                        throw new EncodingAlgorithmException(CommonResourceBundle.getInstance().getString("message.addToTableNotSupported"));
+                    }
+                    
+                    // Decode encoding algorithm integer
+                    _identifier = (_b & 0x02) << 6;
+                    _b = read();
+                    _identifier |= (_b & 0xFC) >> 2;
+                    
+                    decodeOctetsOnSeventhBitOfNonIdentifyingStringOnThirdBit(_b);
+                    
+                    processCIIEncodingAlgorithm();
+                    break;
+                }
+                case DecoderStateTables.CII_INDEX_SMALL:
+                {
+                    final int index = _b & EncodingConstants.INTEGER_4TH_BIT_SMALL_MASK;
+                    try {
+                        _contentHandler.characters(_characterContentChunkTable._array, 
+                                _characterContentChunkTable._offset[index], 
+                                _characterContentChunkTable._length[index]);
+                    } catch (SAXException e) {
+                        throw new FastInfosetException("processCII", e);
+                    }
+                    break;
+                }
+                case DecoderStateTables.CII_INDEX_MEDIUM:
+                {
+                    final int index = (((_b & EncodingConstants.INTEGER_4TH_BIT_MEDIUM_MASK) << 8) | read())
+                            + EncodingConstants.INTEGER_4TH_BIT_SMALL_LIMIT;
+                    try {
+                        _contentHandler.characters(_characterContentChunkTable._array, 
+                                _characterContentChunkTable._offset[index], 
+                                _characterContentChunkTable._length[index]);
+                    } catch (SAXException e) {
+                        throw new FastInfosetException("processCII", e);
+                    }
+                    break;
+                }
+                case DecoderStateTables.CII_INDEX_LARGE:
+                {
+                    final int index = (((_b & EncodingConstants.INTEGER_4TH_BIT_LARGE_MASK) << 16) |
+                            (read() << 8) |
+                            read()) 
+                            + EncodingConstants.INTEGER_4TH_BIT_MEDIUM_LIMIT;
+                    
+                    try {
+                        _contentHandler.characters(_characterContentChunkTable._array, 
+                                _characterContentChunkTable._offset[index], 
+                                _characterContentChunkTable._length[index]);
+                    } catch (SAXException e) {
+                        throw new FastInfosetException("processCII", e);
+                    }
+                    break;
+                }
+                case DecoderStateTables.CII_INDEX_LARGE_LARGE:
+                {
+                    final int index = ((read() << 16) |
+                            (read() << 8) |
+                            read()) 
+                            + EncodingConstants.INTEGER_4TH_BIT_LARGE_LIMIT;
+                    
+                    try {
+                        _contentHandler.characters(_characterContentChunkTable._array, 
+                                _characterContentChunkTable._offset[index], 
+                                _characterContentChunkTable._length[index]);
+                    } catch (SAXException e) {
+                        throw new FastInfosetException("processCII", e);
+                    }
+                    break;
+                }
+                case DecoderStateTables.COMMENT_II:
+                    processCommentII();
+                    break;
+                case DecoderStateTables.PROCESSING_INSTRUCTION_II:
+                    processProcessingII();
+                    break;
+                case DecoderStateTables.UNEXPANDED_ENTITY_REFERENCE_II:
+                {
+                    String entity_reference_name = decodeIdentifyingNonEmptyStringOnFirstBit(_v.otherNCName);
+                    
+                    String system_identifier = ((_b & EncodingConstants.UNEXPANDED_ENTITY_SYSTEM_IDENTIFIER_FLAG) > 0)
+                    ? decodeIdentifyingNonEmptyStringOnFirstBit(_v.otherURI) : "";
+                    String public_identifier = ((_b & EncodingConstants.UNEXPANDED_ENTITY_PUBLIC_IDENTIFIER_FLAG) > 0)
+                    ? decodeIdentifyingNonEmptyStringOnFirstBit(_v.otherURI) : "";
+                    
+                    try {
+                        /*
+                         * TODO
+                         * Need to verify if the skippedEntity method:
+                         * http://java.sun.com/j2se/1.4.2/docs/api/org/xml/sax/ContentHandler.html#skippedEntity(java.lang.String)
+                         * is the correct method to call. It appears so but a more extensive
+                         * check is necessary.
+                         */
+                        _contentHandler.skippedEntity(entity_reference_name);
+                    } catch (SAXException e) {
+                        throw new FastInfosetException("processUnexpandedEntityReferenceII", e);
+                    }
+                    break;
+                }
+                case DecoderStateTables.TERMINATOR_DOUBLE:
+                    _doubleTerminate = true;
+                case DecoderStateTables.TERMINATOR_SINGLE:
+                    _terminate = true;
+                    break;
+                default:
+                    throw new FastInfosetException(CommonResourceBundle.getInstance().getString("message.IllegalStateDecodingEII"));
+            }
+        }
+        
         _terminate = _doubleTerminate;
         _doubleTerminate = false;
-
+        
         try {
             _contentHandler.endElement(name.namespaceName, name.localName, name.qName);
         } catch (SAXException e) {
             throw new FastInfosetException("processEII", e);
         }
     }
-
+    
+    private final void processUtf8CharacterString() throws FastInfosetException, IOException {
+        if ((_b & EncodingConstants.CHARACTER_CHUNK_ADD_TO_TABLE_FLAG) > 0) {
+            _characterContentChunkTable.ensureSize(_octetBufferLength);
+            final int charactersOffset = _characterContentChunkTable._arrayIndex;
+            decodeUtf8StringAsCharBuffer(_characterContentChunkTable._array, charactersOffset);
+            _characterContentChunkTable.add(_charBufferLength);
+            try {
+                _contentHandler.characters(_characterContentChunkTable._array, charactersOffset, _charBufferLength);
+            } catch (SAXException e) {
+                throw new FastInfosetException("processCII", e);
+            }
+        } else {
+            decodeUtf8StringAsCharBuffer();
+            try {
+                _contentHandler.characters(_charBuffer, 0, _charBufferLength);
+            } catch (SAXException e) {
+                throw new FastInfosetException("processCII", e);
+            }
+        }
+    }
+    
     protected final void processEIIWithNamespaces() throws FastInfosetException, IOException {
         final boolean hasAttributes = (_b & EncodingConstants.ELEMENT_ATTRIBUTE_FLAG) > 0;
-
+        
         _clearAttributes = (_namespacePrefixesFeature) ? true : false;
-
+        
         if (++_prefixTable._declarationId == Integer.MAX_VALUE) {
             _prefixTable.clearDeclarationIds();
         }
-
+        
         String prefix = "", namespaceName = "";
         final int start = _namespacePrefixesIndex;
         int b = read();
@@ -954,7 +1167,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 System.arraycopy(_namespacePrefixes, 0, namespaceAIIs, 0, _namespacePrefixesIndex);
                 _namespacePrefixes = namespaceAIIs;
             }
-
+            
             switch (b & EncodingConstants.NAMESPACE_ATTRIBUTE_PREFIX_NAME_MASK) {
                 // no prefix, no namespace
                 // Undeclaration of default namespace
@@ -967,7 +1180,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 case 1:
                     prefix = "";
                     namespaceName = decodeIdentifyingNonEmptyStringOnFirstBitAsNamespaceName(false);
-
+                           
                     _prefixIndex = _namespacePrefixes[_namespacePrefixesIndex++] = -1;
                     break;
                 // prefix, no namespace
@@ -975,22 +1188,22 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 case 2:
                     prefix = decodeIdentifyingNonEmptyStringOnFirstBitAsPrefix(false);
                     namespaceName = "";
-
+                    
                     _namespaceNameIndex = -1;
                     _namespacePrefixes[_namespacePrefixesIndex++] = _prefixIndex;
                     break;
                 // prefix, namespace
-                // Declaration of prefixed namespace
+                // Declaration of prefixed namespace 
                 case 3:
                     prefix = decodeIdentifyingNonEmptyStringOnFirstBitAsPrefix(true);
                     namespaceName = decodeIdentifyingNonEmptyStringOnFirstBitAsNamespaceName(true);
-
+                    
                     _namespacePrefixes[_namespacePrefixesIndex++] = _prefixIndex;
                     break;
             }
-
+    
             _prefixTable.pushScope(_prefixIndex, _namespaceNameIndex);
-
+            
             if (_namespacePrefixesFeature) {
                 // Add the namespace delcaration as an attribute
                 if (prefix != "") {
@@ -1017,7 +1230,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
             throw new IOException(CommonResourceBundle.getInstance().getString("message.EIInamespaceNameNotTerminatedCorrectly"));
         }
         final int end = _namespacePrefixesIndex;
-
+                
         _b = read();
         switch(DecoderStateTables.EII[_b]) {
             case DecoderStateTables.EII_NO_AIIS_INDEX_SMALL:
@@ -1032,7 +1245,8 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
             case DecoderStateTables.EII_LITERAL:
             {
                 final QualifiedName qn = decodeLiteralQualifiedName(
-                            _b & EncodingConstants.LITERAL_QNAME_PREFIX_NAMESPACE_NAME_MASK);
+                            _b & EncodingConstants.LITERAL_QNAME_PREFIX_NAMESPACE_NAME_MASK,
+                            _elementNameTable.getNext());
                 _elementNameTable.add(qn);
                 processEII(qn, hasAttributes);
                 break;
@@ -1040,7 +1254,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
             default:
                 throw new IOException(CommonResourceBundle.getInstance().getString("message.IllegalStateDecodingEIIAfterAIIs"));
         }
-
+        
         try {
             for (int i = end - 1; i >= start; i--) {
                 final int prefixIndex = _namespacePrefixes[i];
@@ -1054,18 +1268,18 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
             throw new IOException("processStartNamespaceAII");
         }
     }
-
+    
     protected final void processAIIs() throws FastInfosetException, IOException {
         QualifiedName name;
         int b;
         String value;
-
+        
         _clearAttributes = true;
-
+        
         if (++_duplicateAttributeVerifier._currentIteration == Integer.MAX_VALUE) {
             _duplicateAttributeVerifier.clear();
         }
-
+        
         do {
             // AII qualified name
             b = read();
@@ -1089,7 +1303,8 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 }
                 case DecoderStateTables.AII_LITERAL:
                     name = decodeLiteralQualifiedName(
-                            b & EncodingConstants.LITERAL_QNAME_PREFIX_NAMESPACE_NAME_MASK);
+                            b & EncodingConstants.LITERAL_QNAME_PREFIX_NAMESPACE_NAME_MASK,
+                            _attributeNameTable.getNext());
                     name.createAttributeValues(_duplicateAttributeVerifier.MAP_SIZE);
                     _attributeNameTable.add(name);
                     break;
@@ -1108,9 +1323,9 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
             }
 
             _duplicateAttributeVerifier.checkForDuplicateAttribute(name.attributeHash, name.attributeId);
-
+            
             // [normalized value] of AII
-
+            
             b = read();
             switch(DecoderStateTables.NISTRING[b]) {
                 case DecoderStateTables.NISTRING_UTF8_SMALL_LENGTH:
@@ -1119,7 +1334,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     if ((b & EncodingConstants.NISTRING_ADD_TO_TABLE_FLAG) > 0) {
                         _attributeValueTable.add(value);
                     }
-
+                    
                     _attributes.addAttribute(name, value);
                     break;
                 case DecoderStateTables.NISTRING_UTF8_MEDIUM_LENGTH:
@@ -1128,20 +1343,20 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     if ((b & EncodingConstants.NISTRING_ADD_TO_TABLE_FLAG) > 0) {
                         _attributeValueTable.add(value);
                     }
-
+                    
                     _attributes.addAttribute(name, value);
                     break;
                 case DecoderStateTables.NISTRING_UTF8_LARGE_LENGTH:
                     _octetBufferLength = ((read() << 24) |
                             (read() << 16) |
                             (read() << 8) |
-                            read())
+                            read()) 
                             + EncodingConstants.OCTET_STRING_LENGTH_5TH_BIT_MEDIUM_LIMIT;
                     value = decodeUtf8StringAsString();
                     if ((b & EncodingConstants.NISTRING_ADD_TO_TABLE_FLAG) > 0) {
                         _attributeValueTable.add(value);
                     }
-
+                    
                     _attributes.addAttribute(name, value);
                     break;
                 case DecoderStateTables.NISTRING_UTF16_SMALL_LENGTH:
@@ -1150,7 +1365,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     if ((b & EncodingConstants.NISTRING_ADD_TO_TABLE_FLAG) > 0) {
                         _attributeValueTable.add(value);
                     }
-
+                    
                     _attributes.addAttribute(name, value);
                     break;
                 case DecoderStateTables.NISTRING_UTF16_MEDIUM_LENGTH:
@@ -1159,7 +1374,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     if ((b & EncodingConstants.NISTRING_ADD_TO_TABLE_FLAG) > 0) {
                         _attributeValueTable.add(value);
                     }
-
+                    
                     _attributes.addAttribute(name, value);
                     break;
                 case DecoderStateTables.NISTRING_UTF16_LARGE_LENGTH:
@@ -1172,7 +1387,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     if ((b & EncodingConstants.NISTRING_ADD_TO_TABLE_FLAG) > 0) {
                         _attributeValueTable.add(value);
                     }
-
+                    
                     _attributes.addAttribute(name, value);
                     break;
                 case DecoderStateTables.NISTRING_RA:
@@ -1182,14 +1397,14 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     _identifier = (b & 0x0F) << 4;
                     b = read();
                     _identifier |= (b & 0xF0) >> 4;
-
+                    
                     decodeOctetsOnFifthBitOfNonIdentifyingStringOnFirstBit(b);
-
+                    
                     value = decodeRestrictedAlphabetAsString();
                     if (addToTable) {
                         _attributeValueTable.add(value);
                     }
-
+                    
                     _attributes.addAttribute(name, value);
                     break;
                 }
@@ -1198,26 +1413,26 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     if ((b & EncodingConstants.NISTRING_ADD_TO_TABLE_FLAG) > 0) {
                         throw new EncodingAlgorithmException(CommonResourceBundle.getInstance().getString("message.addToTableNotSupported"));
                     }
-
+                    
                     _identifier = (b & 0x0F) << 4;
                     b = read();
                     _identifier |= (b & 0xF0) >> 4;
-
+                    
                     decodeOctetsOnFifthBitOfNonIdentifyingStringOnFirstBit(b);
-
+                    
                     processAIIEncodingAlgorithm(name);
                     break;
                 }
                 case DecoderStateTables.NISTRING_INDEX_SMALL:
-                    _attributes.addAttribute(name,
+                    _attributes.addAttribute(name, 
                             _attributeValueTable._array[b & EncodingConstants.INTEGER_2ND_BIT_SMALL_MASK]);
                     break;
                 case DecoderStateTables.NISTRING_INDEX_MEDIUM:
                 {
                     final int index = (((b & EncodingConstants.INTEGER_2ND_BIT_MEDIUM_MASK) << 8) | read())
                     + EncodingConstants.INTEGER_2ND_BIT_SMALL_LIMIT;
-
-                    _attributes.addAttribute(name,
+                    
+                    _attributes.addAttribute(name, 
                             _attributeValueTable._array[index]);
                     break;
                 }
@@ -1225,8 +1440,8 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 {
                     final int index = (((b & EncodingConstants.INTEGER_2ND_BIT_LARGE_MASK) << 16) | (read() << 8) | read())
                     + EncodingConstants.INTEGER_2ND_BIT_MEDIUM_LIMIT;
-
-                    _attributes.addAttribute(name,
+                    
+                    _attributes.addAttribute(name, 
                             _attributeValueTable._array[index]);
                     break;
                 }
@@ -1236,23 +1451,23 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 default:
                     throw new IOException(CommonResourceBundle.getInstance().getString("message.decodingAIIValue"));
             }
-
+            
         } while (!_terminate);
 
         // Reset duplication attribute verfifier
         _duplicateAttributeVerifier._poolCurrent = _duplicateAttributeVerifier._poolHead;
-
+        
         _terminate = _doubleTerminate;
         _doubleTerminate = false;
     }
-
+    
     protected final void processCommentII() throws FastInfosetException, IOException {
         switch(decodeNonIdentifyingStringOnFirstBit()) {
             case NISTRING_STRING:
                 if (_addToTable) {
                     _v.otherString.add(new CharArray(_charBuffer, 0, _charBufferLength, true));
                 }
-
+                
                 try {
                     _lexicalHandler.comment(_charBuffer, 0, _charBufferLength);
                 } catch (SAXException e) {
@@ -1263,7 +1478,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 throw new IOException(CommonResourceBundle.getInstance().getString("message.commentIIAlgorithmNotSupported"));
             case NISTRING_INDEX:
                 final CharArray ca = _v.otherString.get(_integer);
-
+                
                 try {
                     _lexicalHandler.comment(ca.ch, ca.start, ca.length);
                 } catch (SAXException e) {
@@ -1279,10 +1494,10 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 break;
         }
     }
-
+    
     protected final void processProcessingII() throws FastInfosetException, IOException {
         final String target = decodeIdentifyingNonEmptyStringOnFirstBit(_v.otherNCName);
-
+        
         switch(decodeNonIdentifyingStringOnFirstBit()) {
             case NISTRING_STRING:
                 final String data = new String(_charBuffer, 0, _charBufferLength);
@@ -1313,14 +1528,14 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 break;
         }
     }
-
+        
     protected final void processCIIEncodingAlgorithm() throws FastInfosetException, IOException {
         if (_identifier < EncodingConstants.ENCODING_ALGORITHM_BUILTIN_END) {
             if (_primitiveHandler != null) {
                 processCIIBuiltInEncodingAlgorithmAsPrimitive();
             } else if (_algorithmHandler != null) {
                 Object array = processBuiltInEncodingAlgorithmAsObject();
-
+                
                 try {
                     _algorithmHandler.object(null, _identifier, array);
                 } catch (SAXException e) {
@@ -1329,7 +1544,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
             } else {
                 StringBuffer buffer = new StringBuffer();
                 processBuiltInEncodingAlgorithmAsCharacters(buffer);
-
+                
                 try {
                     _contentHandler.characters(buffer.toString().toCharArray(), 0, buffer.length());
                 } catch (SAXException e) {
@@ -1340,7 +1555,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                 // Set back buffer position to start of encoded string
                 _octetBufferOffset -= _octetBufferLength;
                 decodeUtf8StringIntoCharBuffer();
-
+                
                 try {
                     _lexicalHandler.startCDATA();
                     _contentHandler.characters(_charBuffer, 0, _charBufferLength);
@@ -1352,9 +1567,9 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
             final String URI = _v.encodingAlgorithm.get(_identifier - EncodingConstants.ENCODING_ALGORITHM_APPLICATION_START);
             if (URI == null) {
                 throw new EncodingAlgorithmException(CommonResourceBundle.getInstance().
-                        getString("message.URINotPresent", new Object[]{new Integer(_identifier)}));
+                        getString("message.URINotPresent", new Object[]{Integer.valueOf(_identifier)}));
             }
-
+            
             final EncodingAlgorithm ea = (EncodingAlgorithm)_registeredEncodingAlgorithms.get(URI);
             if (ea != null) {
                 final Object data = ea.decodeFromBytes(_octetBuffer, _octetBufferStart, _octetBufferLength);
@@ -1381,14 +1596,12 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
             throw new EncodingAlgorithmException(CommonResourceBundle.getInstance().getString("message.identifiers10to31Reserved"));
         }
     }
-
+    
     protected final void processCIIBuiltInEncodingAlgorithmAsPrimitive() throws FastInfosetException, IOException {
         try {
             int length;
             switch(_identifier) {
                 case EncodingAlgorithmIndexes.HEXADECIMAL:
-                    _primitiveHandler.bytes(_octetBuffer, _octetBufferStart, _octetBufferLength);
-                    break;
                 case EncodingAlgorithmIndexes.BASE64:
                     _primitiveHandler.bytes(_octetBuffer, _octetBufferStart, _octetBufferLength);
                     break;
@@ -1401,7 +1614,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                                 array, 0, builtInAlgorithmState.shortArray.length);
                         builtInAlgorithmState.shortArray = array;
                     }
-
+                    
                     BuiltInEncodingAlgorithmFactory.shortEncodingAlgorithm.
                             decodeFromBytesToShortArray(builtInAlgorithmState.shortArray, 0,
                             _octetBuffer, _octetBufferStart, _octetBufferLength);
@@ -1416,7 +1629,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                                 array, 0, builtInAlgorithmState.intArray.length);
                         builtInAlgorithmState.intArray = array;
                     }
-
+                    
                     BuiltInEncodingAlgorithmFactory.intEncodingAlgorithm.
                             decodeFromBytesToIntArray(builtInAlgorithmState.intArray, 0,
                             _octetBuffer, _octetBufferStart, _octetBufferLength);
@@ -1431,7 +1644,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                                 array, 0, builtInAlgorithmState.longArray.length);
                         builtInAlgorithmState.longArray = array;
                     }
-
+                    
                     BuiltInEncodingAlgorithmFactory.longEncodingAlgorithm.
                             decodeFromBytesToLongArray(builtInAlgorithmState.longArray, 0,
                             _octetBuffer, _octetBufferStart, _octetBufferLength);
@@ -1446,7 +1659,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                                 array, 0, builtInAlgorithmState.booleanArray.length);
                         builtInAlgorithmState.booleanArray = array;
                     }
-
+                    
                     BuiltInEncodingAlgorithmFactory.booleanEncodingAlgorithm.
                             decodeFromBytesToBooleanArray(
                             builtInAlgorithmState.booleanArray, 0, length,
@@ -1462,7 +1675,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                                 array, 0, builtInAlgorithmState.floatArray.length);
                         builtInAlgorithmState.floatArray = array;
                     }
-
+                    
                     BuiltInEncodingAlgorithmFactory.floatEncodingAlgorithm.
                             decodeFromBytesToFloatArray(builtInAlgorithmState.floatArray, 0,
                             _octetBuffer, _octetBufferStart, _octetBufferLength);
@@ -1477,7 +1690,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                                 array, 0, builtInAlgorithmState.doubleArray.length);
                         builtInAlgorithmState.doubleArray = array;
                     }
-
+                    
                     BuiltInEncodingAlgorithmFactory.doubleEncodingAlgorithm.
                             decodeFromBytesToDoubleArray(builtInAlgorithmState.doubleArray, 0,
                             _octetBuffer, _octetBufferStart, _octetBufferLength);
@@ -1492,7 +1705,7 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                                 array, 0, builtInAlgorithmState.longArray.length);
                         builtInAlgorithmState.longArray = array;
                     }
-
+                    
                     BuiltInEncodingAlgorithmFactory.uuidEncodingAlgorithm.
                             decodeFromBytesToLongArray(builtInAlgorithmState.longArray, 0,
                             _octetBuffer, _octetBufferStart, _octetBufferLength);
@@ -1502,14 +1715,14 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
                     throw new UnsupportedOperationException("CDATA");
                 default:
                     throw new FastInfosetException(CommonResourceBundle.getInstance().
-                            getString("message.unsupportedAlgorithm", new Object[]{new Integer(_identifier)}));
+                            getString("message.unsupportedAlgorithm", new Object[]{Integer.valueOf(_identifier)}));
             }
         } catch (SAXException e) {
             throw new FastInfosetException(e);
         }
     }
-
-
+    
+    
     protected final void processAIIEncodingAlgorithm(QualifiedName name) throws FastInfosetException, IOException {
         if (_identifier < EncodingConstants.ENCODING_ALGORITHM_BUILTIN_END) {
             if (_primitiveHandler != null || _algorithmHandler != null) {
@@ -1524,9 +1737,9 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
             final String URI = _v.encodingAlgorithm.get(_identifier - EncodingConstants.ENCODING_ALGORITHM_APPLICATION_START);
             if (URI == null) {
                 throw new EncodingAlgorithmException(CommonResourceBundle.getInstance().
-                        getString("message.URINotPresent", new Object[]{new Integer(_identifier)}));
+                        getString("message.URINotPresent", new Object[]{Integer.valueOf(_identifier)}));
             }
-
+            
             final EncodingAlgorithm ea = (EncodingAlgorithm)_registeredEncodingAlgorithms.get(URI);
             if (ea != null) {
                 final Object data = ea.decodeFromBytes(_octetBuffer, _octetBufferStart, _octetBufferLength);
@@ -1549,17 +1762,17 @@ public class SAXDocumentParser extends Decoder implements FastInfosetReader {
             throw new EncodingAlgorithmException(CommonResourceBundle.getInstance().getString("message.identifiers10to31Reserved"));
         }
     }
-
+    
     protected final void processBuiltInEncodingAlgorithmAsCharacters(StringBuffer buffer) throws FastInfosetException, IOException {
         // TODO not very efficient, need to reuse buffers
         Object array = BuiltInEncodingAlgorithmFactory.table[_identifier].
                 decodeFromBytes(_octetBuffer, _octetBufferStart, _octetBufferLength);
-
+        
         BuiltInEncodingAlgorithmFactory.table[_identifier].convertToCharacters(array,  buffer);
     }
-
+    
     protected final Object processBuiltInEncodingAlgorithmAsObject() throws FastInfosetException, IOException {
         return BuiltInEncodingAlgorithmFactory.table[_identifier].
                 decodeFromBytes(_octetBuffer, _octetBufferStart, _octetBufferLength);
-    }
+    }    
 }
